Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I833fc6d1e2bae38afc9c6b003077290dd7b6dfc8

--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"বাঁদিকেরটি পেয়ার করুন"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"হিয়ারিং ডিভাইস সংক্রান্ত সেটিংস"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"শর্টকাট, হিয়ারিং এড কম্প্যাটিবিলিটি"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"প্রিসেট"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"প্রিসেট"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"প্রিসেট আপডেট করা যায়নি"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"অডিও আউটপুট"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"অডিও আউটপুট সম্পর্কে"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"বাতিল করুন"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"না থাক"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"আমি সম্মতি জানাচ্ছি"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"আরও"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"আপনার ফেস দিয়ে আনলক করুন"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"মনে রাখবেন"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"আপনার ফোন আনলক বা কেনাকাটাগুলির অনুমোদন করতে আপনার আঙ্গুলের ছাপ ব্যবহার করুন। \n\nদ্রষ্টব্য: আপনি এই ডিভাইসটি আনলক করার জন্য আপনার আঙ্গুলের ছাপ ব্যবহার করতে পারবেন না। আরও তথ্যের জন্য, আপনার প্রতিষ্ঠানের প্রশাসকের সাথে যোগাযোগ করুন।"</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"বাতিল করুন"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"না থাক"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"আমি রাজি"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"ফিঙ্গারপ্রিন্ট এড়িয়ে যাবেন?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"ফিঙ্গারপ্রিন্ট সেট-আপ করতে এক থেকে দুই মিনিট মতো সময় লাগবে। আপনি যদি এড়িয়ে যেতে চান তবে পরে সেটিংসে গিয়ে পরিবর্তন করতে পারবেন।"</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"প্রতিবার ডিভাইস লক হলে"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"স্ক্রিন টাইমআউটের পরে ৫ মিনিট"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"শুধুমাত্র ডিভাইস রিস্টার্ট হওয়ার পরে"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"আপনার প্রাইভেট স্পেসের জন্য অন্য একটি লক ব্যবহার করলে, আপনাকে প্রাইভেট স্পেসে অ্যাপ ওপেন করার আগে, আপনি যে সেই ব্যক্তি তা যাচাই করতে হবে।"</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"প্রাইভেট স্পেস লুকান"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"প্রাইভেট স্পেস লক থাকাকালীন সেটি লুকান"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"আপনার ডিভাইসে যে প্রাইভেট স্পেস আছে সে কথা অন্য লোকজনকে জানানো বন্ধ করতে, এটি আপনার অ্যাপ তালিকা থেকে লুকাতে পারবেন"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"সেট-আপ করুন"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"প্রাইভেট স্পেস"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"প্রাইভেট অ্যাপ আলাদা একটি স্পেসে লুকিয়ে রাখুন বা লক করুন। অতিরিক্ত সুরক্ষার জন্য নির্দিষ্ট Google অ্যাকাউন্ট ব্যবহার করুন।"</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"আপনার প্রাইভেট স্পেস সেট-আপ করুন"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"আপনার স্পেসের জন্য Google অ্যাকাউন্ট বেছে নিন"</b>\n"নির্দিষ্ট একটি অ্যাকাউন্ট ব্যবহার করলে সিঙ্ক করা ফাইল, ফটো এবং ইমেল আপনার স্পেসের বাইরে দেখানো হবে না"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"লক সেট করুন"</b>\n"অন্যরা যাতে এই স্পেস খুলতে না পারে সেজন্য আপনার স্পেস লক করুন"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"অ্যাপ ইনস্টল করুন"</b>\n"আপনার প্রাইভেট স্পেস থেকে Play Store অ্যাক্সেস করতে পারবেন যার ফলে আপনি সহজেই অ্যাপ ইনস্টল করতে পারবেন।"</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"আপনার প্রাইভেট স্পেস লক থাকাকালীন, সেখানে থাকা অ্যাপ, পার্মিশন ম্যানেজার, প্রাইভেসি ড্যাশবোর্ড এবং অন্যান্য সেটিংসে দেখা যাবে না।\n\nনতুন ডিভাইসে আপনার প্রাইভেট স্পেস ফিরিয়ে আনা যাবে না। আপনি অন্য ডিভাইসে প্রাইভেট স্পেস ব্যবহার করতে চাইলে, আপনাকে অন্য একটি প্রাইভেট স্পেস সেট-আপ করতে হবে।\n\nযদি কেউ আপনার ডিভাইস একটি কম্পিউটারের সাথে কানেক্ট করেন বা ডিভাইসে ক্ষতিকারক অ্যাপ ইনস্টল করেন, তাহলে তিনি আপনার প্রাইভেট স্পেস হয়ত অ্যাক্সেস করতে পারবেন।"</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"আপনার প্রাইভেট স্পেস লক থাকাকালীন, সেখানে থাকা অ্যাপ পার্মিশন ম্যানেজার, প্রাইভেসি ড্যাশবোর্ড এবং অন্যান্য সেটিংসে দেখা যাবে না।\n\nনতুন ডিভাইসে আপনার প্রাইভেট স্পেস সরানো যাবে না। আপনি অন্য ডিভাইসে প্রাইভেট স্পেস ব্যবহার করতে চাইলে আরেকটি সেট-আপ করতে হবে।\n\nকোনও কম্পিউটারের সাথে আপনার ডিভাইস কানেক্ট করতে পারেন বা আপনার ডিভাইসে ক্ষতিকর অ্যাপ ইনস্টল করতে পারেন এমন যেকেউ হয়ত প্রাইভেট স্পেস ব্যবহার করতে পারেন।"</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"প্রাইভেট স্পেস সম্পর্কে আরও জানুন"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"এর জন্য কিছুক্ষণ সময় লাগতে পারে"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"প্রাইভেট স্পেস সেট-আপ করা হচ্ছে…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"সিস্টেম সার্টিফিকেট"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"সার্টিফিকেট পিন করা হচ্ছে"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"নেটওয়ার্কের বিবরণ"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"সাবনেট মাস্ক"</string>
     <string name="server_name_title" msgid="7257095185810299066">"সার্ভারের নাম"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"ধরন"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"ডিভাইসের ওয়াই-ফাই MAC অ্যাড্রেস"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"ব্লুটুথ অ্যাড্রেস"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"সিরিয়াল নম্বর"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"আপ টাইম"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"তৈরির তারিখ"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"ব্যবহারের প্রথম তারিখ"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"সাইকেল কাউন্ট"</string>
@@ -2320,7 +2333,7 @@
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"হিয়ারিং ডিভাইস পেয়ার করা"</string>
     <string name="accessibility_hearing_device_pairing_intro" msgid="7022201665808166517">"আপনি এই পৃষ্ঠায় ASHA এবং LE Audio হিয়ারিং ডিভাইসের সাথে পেয়ার করতে পারেন। আপনার হিয়ারিং ডিভাইস চালু আছে কিনা এবং পেয়ার করার জন্য রেডি কিনা তা ভালোভাবে দেখে নিন।"</string>
     <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"উপলভ্য হিয়ারিং ডিভাইস"</string>
-    <string name="accessibility_found_all_devices" msgid="7817834722148556520">"হিয়ারিং ডিভাইস দেখতে পাচ্ছেন না?"</string>
+    <string name="accessibility_found_all_devices" msgid="7817834722148556520">"আপনার হিয়ারিং ডিভাইস দেখতে পাচ্ছেন না?"</string>
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"আরও ডিভাইস দেখুন"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"অডিও অ্যাডজাস্টমেন্ট"</string>
     <string name="accessibility_toggle_audio_description_preference_title" msgid="8916473886256061220">"অডিও বিবরণ"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"এডিট করুন"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"সময়সূচি"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"সময়সূচি"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"অটোমেটিক চালু করা হয়"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"একটি ক্যালেন্ডার যোগ করুন"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"আপনার ক্যালেন্ডার ব্যবহার করুন"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"শিডিউল করুন"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"সময়সূচি"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"নির্দিষ্ট সময়ে ফোন সাইলেন্ট করুন"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"\'বিরক্ত করবে না\' মোডের নিয়ম সেট-আপ করুন"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"বাঁদিক"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"ডান"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"কেস"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"সেটিংস প্যানেল"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"ফোর্স ডেস্কটপ মোড"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"সেকেন্ডারি ডিসপ্লেতে ফোর্স এক্সপেরিমেন্টাল ডেস্কটপ মোড চালু করা আছে"</string>
