--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Vincula l\'esquerra"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Configuració de l\'audiòfon"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Drecera, compatibilitat amb audiòfons"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Valors predefinits"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Valors predefinits"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"No s\'ha pogut actualitzar el valor predefinit"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Sortida d\'àudio"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Sobre la sortida d\'àudio"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Cancel·la"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"No, gràcies"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Accepto"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Més"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Desbloqueja amb la cara"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Nota important"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Utilitza l\'empremta digital per desbloquejar el telèfon o aprovar compres.\n\nNota: no pots fer servir l\'empremta digital per desbloquejar aquest dispositiu. Per obtenir més informació, contacta amb l\'administrador de la teva organització."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Cancel·la"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"No, gràcies"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Accepto"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Vols ometre l\'empremta digital?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Només tardaràs un parell de minuts a configurar l\'empremta digital. Si omets aquest pas, pots afegir-la més endavant a Configuració."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Cada vegada que es bloquegi el dispositiu"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 min després de temps d\'espera de pantalla"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Només després de reiniciar el dispositiu"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Si utilitzes un bloqueig diferent per al teu espai privat, és possible que hagis de verificar la teva identitat per obrir les aplicacions a l\'espai privat."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Amaga l\'espai privat"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Amaga l\'espai privat quan està bloquejat"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Per evitar que altres persones sàpiguen que tens un espai privat al dispositiu, pots amagar-lo de la llista d\'aplicacions"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Configura"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Espai privat"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Amaga o bloqueja les aplicacions privades en un espai separat. Utilitza un Compte de Google dedicat per a més seguretat."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Configura l\'espai privat"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Tria un Compte de Google per a l\'espai"</b>\n"Utilitzar un compte dedicat ajuda a evitar que els fitxers, les fotos i els correus electrònics sincronitzats es mostrin fora de l\'espai."</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Defineix un bloqueig"</b>\n"Bloqueja l\'espai per evitar que altres persones l\'obrin."</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Instal·la aplicacions"</b>\n"L\'espai privat té la seva pròpia Play Store perquè puguis instal·lar aplicacions fàcilment."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Les aplicacions de l\'espai privat no es mostraran al gestor de permisos, al tauler de privadesa ni en altres opcions de configuració quan l\'espai privat estigui bloquejat.\n\nL\'espai privat no es pot restaurar en un dispositiu nou. Caldrà que configuris un altre espai privat si el vols utilitzar en un altre dispositiu.\n\nQualsevol persona que connecti el teu dispositiu a un ordinador o instal·li aplicacions malicioses al teu dispositiu podria accedir a l\'espai privat."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Les aplicacions de l\'espai privat no es mostraran al gestor de permisos, al tauler de privadesa ni en altres opcions de configuració quan l\'espai privat estigui bloquejat.\n\nL\'espai privat no es pot traslladar a un dispositiu nou. Caldrà que configuris un altre espai privat si el vols utilitzar en un altre dispositiu.\n\nQualsevol persona que connecti el teu dispositiu a un ordinador o instal·li aplicacions perjudicials al teu dispositiu podria accedir a l\'espai privat."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Més informació sobre l\'espai privat"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Aquesta acció tardarà una estona"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"S\'està configurant l\'espai privat…"</string>
@@ -796,7 +806,7 @@
     <string name="lockpassword_password_requires_nonletter" msgid="1185342065898300006">"{count,plural, =1{Ha de contenir com a mínim 1 caràcter que no sigui una lletra}other{Ha de contenir com a mínim # caràcters que no siguin lletres}}"</string>
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{Ha de contenir com a mínim 1 caràcter que no sigui un número}other{Ha de contenir com a mínim # caràcters que no siguin números}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"L\'administrador del dispositiu no permet que s\'utilitzi una contrasenya recent"</string>
-    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"No es permet cap seqüència de dígits ascendents, descendents ni repetits"</string>
+    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"No es permeten les seqüències de dígits ascendents, descendents o repetits"</string>
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"Confirma"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"Esborra"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"El bloqueig de pantalla ja s\'ha canviat. Torna-ho a provar amb el bloqueig de pantalla nou."</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Certificat del sistema"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Fixació de certificats"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Detalls de la xarxa"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Màscara de la subxarxa"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Nom del servidor"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Tipus"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Adreça MAC de la xarxa Wi‑Fi del dispositiu"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Adreça de Bluetooth"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Número de sèrie"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Temps d\'activitat"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Data de fabricació"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Data del primer ús"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Nombre de cicles"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"Edita"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"Programacions"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"Programació"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"Activa automàticament"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Afegeix un calendari"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Utilitza el calendari"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Programació"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Programació"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Silencia en hores concretes"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Defineix les regles de No molestis"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Esquerre"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Dret"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Funda"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Tauler de configuració"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Força el mode d\'escriptori"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Força el mode d\'escriptori experimental en pantalles secundàries"</string>
@@ -4846,7 +4857,7 @@
     <string name="enable_16k_pages" msgid="8001470927566110689">"Inicia amb pàgines de 16 kB"</string>
     <string name="enable_16k_pages_summary" msgid="1964363364670306912">"Inicia amb un nucli compatible amb pàgines de 16 kB"</string>
     <string name="confirm_enable_16k_pages_title" msgid="611010487387251491">"Canvia del mode de 4 kB al mode de 16 kB"</string>
-    <string name="confirm_enable_16k_pages_text" msgid="6129208614283750541">"Estàs en mode independent de les pàgines executant un nucli de 4 kB i canviaràs al mode de 16 kB. No es pot garantir la integritat del programari en aquest mode, i les dades que estiguin emmagatzemades al dispositiu mentre el bootloader està desbloquejat poden estar en perill. Aquesta acció reiniciarà el dispositiu. Com que es desactivaran algunes funcions en aquests modes, és possible que algunes aplicacions no funcionin. Per fer que el dispositiu torni al mode de producció, hauràs de tornar al mode de 4 kB i, a continuació, bloquejar el bootloader, que restablirà les dades de fàbrica del dispositiu. Quan el dispositiu s\'iniciï a Android correctament, desactiva el desbloqueig OEM a Opcions per a desenvolupadors."</string>
+    <string name="confirm_enable_16k_pages_text" msgid="6129208614283750541">"Estàs en mode independent de la pàgina executant un nucli de 4 kB i canviaràs al mode de 16 kB. No es pot garantir la integritat del programari en aquest mode, i les dades que estiguin emmagatzemades al dispositiu mentre el bootloader està desbloquejat poden estar en perill. Aquesta acció reiniciarà el dispositiu. Com que es desactivaran algunes funcions en aquests modes, és possible que algunes aplicacions no funcionin. Per fer que el dispositiu torni al mode de producció, hauràs de tornar al mode de 4 kB i, a continuació, bloquejar el bootloader, que restablirà les dades de fàbrica del dispositiu. Quan el dispositiu s\'iniciï a Android correctament, desactiva el desbloqueig OEM a Opcions per a desenvolupadors."</string>
     <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"Canvia del mode de 16 kB al mode de 4 kB"</string>
     <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"Estàs en mode independent de la pàgina executant un nucli de 16 kB i canviaràs al mode de 4 kB. No es pot garantir la integritat del programari en aquest mode, i les dades que estiguin emmagatzemades al dispositiu mentre el bootloader està desbloquejat poden estar en perill. Aquesta acció reiniciarà el dispositiu. Com que es desactivaran algunes funcions en aquests modes, és possible que algunes aplicacions no funcionin. Per fer que el dispositiu torni al mode de producció, hauràs de tornar a bloquejar el bootloader, que restablirà les dades de fàbrica del dispositiu. Quan el dispositiu s\'iniciï a Android correctament, desactiva el desbloqueig OEM a Opcions per a desenvolupadors."</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"No s\'ha pogut actualitzar el nucli a un compatible amb pàgines de 16 kB."</string>
