--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Par venstre apparat"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Indstillinger for høreapparat"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Genvej, høreapparatskompatibilitet"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Forindstillinger"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Forindstillinger"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Forindstillingen kunne ikke opdateres"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Lydudgang"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Om lydudgang"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Annuller"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Nej tak"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Acceptér"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Mere"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Lås op med dit ansigt"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Husk!"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Lås din telefon op eller godkend køb ved hjælp af dit fingeraftryk.\n\nBemærk! Du kan ikke bruge dit fingeraftryk til at låse op for denne enhed. Få flere oplysninger ved at kontakte administratoren for din organisation."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Annuller"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"Nej tak"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Acceptér"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Spring fingeraftryk over?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Konfigurationen af fingeraftryk tager ikke mere end et minut eller to. Hvis du springer dette trin over, kan du tilføje dit fingeraftryk på et senere tidspunkt i indstillingerne."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Hver gang enheden låses"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 minutter efter timeout for skærmen"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Kun efter genstart af enheden"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Hvis du bruger en anden lås til dit private område, skal du muligvis verificere din identitet for at åbne apps i dit private område."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Skjul privat område"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Skjul det private område, når det er låst"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Hvis andre ikke må vide, at du har et privat område på din enhed, kan du skjule det på applisten"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Konfigurer"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Privat område"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Skjul eller lås private apps i et separat område. Anvend en dedikeret Google-konto for at få ekstra beskyttelse."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Konfigurer dit private område"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Vælg en Google-konto til dit område"</b>\n"En dedikeret konto hjælper med at forhindre synkroniserede filer, billeder og mails i at blive vist uden for dit område."</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Konfigurer en lås"</b>\n"Lås dit område for at forhindre andre i at åbne det."</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Installer apps"</b>\n"Dit private område har sin egen Play Butik, så du nemt kan installere apps."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Apps i dit private område vises ikke i tilladelsesadministrator, privatlivspanelet eller andre indstillinger, når det private område er låst.\n\nDu kan ikke gendanne dit private område på en ny enhed. Hvis du vil bruge det private område på en anden enhed, skal du konfigurere et nyt privat område.\n\nPersoner, der slutter din enhed til en computer eller installerer skadelige apps på din enhed, kan muligvis få adgang til dit private område."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Apps i dit private område vises ikke i tilladelsesmanager, privatlivspanelet eller andre indstillinger, når det private område er låst.\n\nDu kan ikke flytte dit private område til en ny enhed. Hvis du vil bruge det private område på en anden enhed, skal du konfigurere et nyt privat område.\n\nPersoner, der slutter din enhed til en computer eller installerer skadelige apps på din enhed, kan muligvis få adgang til dit private område."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Få flere oplysninger om privat område"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Det tager et øjeblik"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Konfigurerer et privat område…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Systemcertifikat"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Fastgørelse af certifikat"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Netværksoplysninger"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Undernetmaske"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Servernavn"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Type"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Enhedens MAC-adresse for Wi-Fi"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth-adresse"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Serienummer"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Oppetid"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Produktionsdato"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Dato for ibrugtagning"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Antal cyklusser"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"Rediger"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"Tidsplaner"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"Tidsplan"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"Aktivér automatisk"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Tilføj en kalender"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Brug din kalender"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Tidsplan"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Planlæg"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Gør telefonen lydløs på bestemte tidspunkter"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Angiv regler for Forstyr ikke"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Venstre"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Højre"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Etui"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Indstillingspanel"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Gennemtving skrivebordstilstand"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Gennemtving eksperimentel skrivebordstilstand på sekundære skærme"</string>
