--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"ផ្គូផ្គងឧបករណ៍ជំនួយការស្ដាប់ខាងឆ្វេង"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"ការកំណត់ឧបករណ៍ជំនួយការស្ដាប់"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"ផ្លូវកាត់ ភាពត្រូវគ្នាជាមួយនឹង​ឧបករណ៍​ជំនួយការស្ដាប់"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"កំណត់ជាមុន"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"កំណត់ជាមុន"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"មិនអាច​ប្ដូរ​ការកំណត់ជាមុន​បានទេ"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"ឧបករណ៍បញ្ចេញសំឡេង"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"អំពីឧបករណ៍បញ្ចេញសំឡេង"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"បោះបង់"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"ទេ អរគុណ!"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"ខ្ញុំយល់ព្រម"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"ច្រើន​ទៀត"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"ដោះសោ​ដោយប្រើ​មុខ​របស់អ្នក"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"សូមចងចាំ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"ប្រើស្នាមម្រាមដៃរបស់អ្នកដើម្បីដោះសោទូរសព្ទរបស់អ្នក ឬយល់ព្រមលើការទិញ។\n\nចំណាំ៖ អ្នកមិនអាចប្រើស្នាមម្រាមដៃរបស់អ្នក ដើម្បីដោះសោឧបករណ៍នេះឡើយ។ សម្រាប់ព័ត៌មានបន្ថែម សូមទាក់ទងអ្នកគ្រប់គ្រង​របស់​ស្ថាប័នអ្នក។"</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"បោះបង់"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"ទេ អរគុណ"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"ខ្ញុំយល់ព្រម"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"រំលង​ស្នាម​ម្រាមដៃឬ?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"ការរៀបចំស្នាមម្រាមដៃ​ចំណាយពេលត្រឹមតែមួយទៅពីរនាទីប៉ុណ្ណោះ។ ប្រសិនបើ​អ្នករំលងវា អ្នកអាច​បញ្ចូលស្នាមម្រាមដៃ​របស់អ្នក​ក្នុងការកំណត់​នៅពេលក្រោយបាន។"</string>
@@ -608,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"រៀបចំ"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"លំហ​ឯកជន"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"លាក់ ឬចាក់សោកម្មវិធីឯកជននៅក្នុងលំហដាច់ដោយឡែក។ ប្រើគណនី Google ដាច់ដោយឡែកសម្រាប់សុវត្ថិភាពបន្ថែម។"</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"រៀបចំលំហឯកជនរបស់អ្នក"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"ជ្រើសរើសគណនី Google សម្រាប់លំហរបស់អ្នក"</b>\n"ការប្រើគណនីដាច់ដោយឡែកជួយបញ្ឈប់ឯកសារ រូបថត និងអ៊ីមែលដែលបានធ្វើសមកាលកម្ម ដែលបង្ហាញនៅខាងក្រៅលំហរបស់អ្នក"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"កំណត់សោ"</b>\n"ចាក់សោលំហរបស់អ្នក ដើម្បីកុំឱ្យអ្នកដទៃបើកវាបាន"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"ដំឡើងកម្មវិធី"</b>\n"លំហឯកជនរបស់អ្នកមាន Play Store របស់ខ្លួនផ្ទាល់ ដូច្នេះអ្នកអាចដំឡើងកម្មវិធីបានយ៉ាងងាយស្រួល។"</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"កម្មវិធីនៅក្នុងលំហឯកជនរបស់អ្នកនឹងមិនបង្ហាញនៅក្នុងមុខងារគ្រប់គ្រងការអនុញ្ញាត ផ្ទាំងគ្រប់គ្រងឯកជនភាព និងការកំណត់ផ្សេងទៀតទេ នៅពេលលំហឯកជនរបស់អ្នកត្រូវបានចាក់សោ។\n\nមិនអាចស្ដារលំហឯកជនរបស់អ្នកទៅឧបករណ៍ថ្មីបានទេ។ អ្នកនឹងត្រូវរៀបចំលំហឯកជនមួយទៀត ប្រសិនបើអ្នកចង់ប្រើវាលើឧបករណ៍មួយទៀត។\n\nគ្រប់គ្នាដែលភ្ជាប់ឧបករណ៍របស់អ្នកទៅនឹងកុំព្យូទ័រ ឬដំឡើងកម្មវិធីគ្រោះថ្នាក់នៅលើឧបករណ៍របស់អ្នក ប្រហែលអាចចូលប្រើប្រាស់លំហឯកជនរបស់អ្នកបាន។"</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"កម្មវិធីនៅក្នុងលំហឯកជនរបស់អ្នកនឹងមិនបង្ហាញនៅក្នុងមុខងារគ្រប់គ្រងការអនុញ្ញាត ផ្ទាំងគ្រប់គ្រងឯកជនភាព និងការកំណត់ផ្សេងទៀតទេ នៅពេលលំហឯកជនរបស់អ្នកត្រូវបានចាក់សោ។\n\nមិនអាចផ្លាស់ទីលំហឯកជនរបស់អ្នកទៅឧបករណ៍ថ្មីបានទេ។ អ្នកនឹងត្រូវរៀបចំលំហឯកជនមួយទៀត ប្រសិនបើអ្នកចង់ប្រើវាលើឧបករណ៍មួយទៀត។\n\nនរណាក៏ដោយដែលភ្ជាប់ឧបករណ៍របស់អ្នកទៅកុំព្យូទ័រ ឬដំឡើងកម្មវិធីគ្រោះថ្នាក់នៅលើឧបករណ៍របស់អ្នក ប្រហែលអាចចូលប្រើប្រាស់លំហឯកជនរបស់អ្នកបាន។"</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"ស្វែងយល់បន្ថែមអំពីលំហឯកជន"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"សកម្មភាពនេះ​នឹងចំណាយពេល​បន្តិច"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"កំពុងរៀបចំលំហឯកជន…"</string>
@@ -795,7 +806,7 @@
     <string name="lockpassword_password_requires_nonletter" msgid="1185342065898300006">"{count,plural, =1{ត្រូវតែមានតួដែលមិនមែនជាអក្សរយ៉ាងហោចណាស់ 1}other{ត្រូវតែមានតួដែលមិនមែនជាអក្សរយ៉ាងហោចណាស់ #}}"</string>
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{ត្រូវតែមាន​តួដែលមិនមែន​ជាលេខ​យ៉ាងហោចណាស់ 1}other{ត្រូវតែមាន​តួដែលមិនមែន​ជាលេខ​យ៉ាងហោចណាស់ #}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"អ្នក​គ្រប់គ្រង​ឧបករណ៍​មិន​អនុញ្ញាត​ឲ្យ​ប្រើ​ពាក្យ​សម្ងាត់​បច្ចុប្បន្ន​ទេ"</string>
-    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"មិន​អនុញ្ញាត​ឲ្យ​មានលំដាប់ឡើង ចុះ ឬច្រំដែលទេ"</string>
+    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"មិន​អនុញ្ញាត​ឲ្យ​មានលំដាប់ឡើង ចុះ ឬដដែលៗទេ"</string>
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"បញ្ជាក់"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"លុប"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"ចាក់សោអេក្រង់ត្រូវបានផ្លាស់ប្ដូរហើយ។ សូមព្យាយាម​ម្ដងទៀត ដោយប្រើ​ការចាក់សោអេក្រង់​ថ្មី។"</string>
@@ -1054,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"វិញ្ញាបនបត្រប្រព័ន្ធ"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"ការខ្ទាស់វិញ្ញាបនបត្រ"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"ព័ត៌មាន​បណ្ដាញ"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"របាំងបណ្តាញរង"</string>
     <string name="server_name_title" msgid="7257095185810299066">"ឈ្មោះម៉ាស៊ីនមេ"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"ប្រភេទ"</string>
@@ -1371,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"អាសយដ្ឋាន MAC Wi‑Fi ឧបករណ៍"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"អាសយដ្ឋាន​ប៊្លូធូស"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"លេខ​ស៊េរី"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"រយៈ​ពេល​បើក"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"កាលបរិច្ឆេទផលិត"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"កាលបរិច្ឆេទនៃការប្រើដំបូង"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"ចំនួនវដ្ដ"</string>
@@ -4780,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"ឆ្វេង"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"ស្ដាំ"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"ស្រោម"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"ផ្ទាំងការកំណត់"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"បង្ខំ​មុខងារ​អេក្រង់ដើម"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"បង្ខំ​មុខងារ​អេក្រង់​ដើម​សាកល្បង​នៅលើ​អេក្រង់​ទី​ពីរ"</string>
