--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"වම් කණ යුගල කරන්න"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"ශ්‍රවණ උපකරණ සැකසීම්"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"කෙටිමඟ, ශ්‍රවණාධාරක අනුකූලත්වය"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"පෙර සැකසීම්"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"පෙර සැකසීම්"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"පෙර සැකසීම යාවත්කාලීන කළ නොහැකි විය"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"ශබ්ද ප්‍රතිදානය"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"ශ්‍රව්‍ය ප්‍රතිදානය පිළිබඳව"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"අවලංගු කරන්න"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"එපා ස්තූතියි"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"මම එකඟ වෙමි"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"තව"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"ඔබේ මුහුණ සමඟ අගුලු හරින්න"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"මතක තබා ගන්න"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"ඔබේ දුරකථනය අගුලු හැරීමට, හෝ මිලදී ගැනීම් අනුමත කිරීමට ඔබේ ඇඟිලි සලකුණ භාවිත කරන්න.\n\nසටහන: ඔබට ඔබේ ඇඟිලි සලකුණ මෙම උපාංගය අගුලු හැරීමට භාවිත කළ නොහැකිය. තව තොරතුරු සඳහා, ඔබේ සංවිධානයෙහි පරිපාලක අමතන්න."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"අවලංගු කරන්න"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"එපා, ස්තුතියි"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"මම එකඟ වෙමි"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"ඇඟිලි සලකුණ මඟ හරින්නද?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"ඇඟිලි සලකුණු සැකසීම මිනිත්තුවක් හෝ දෙකක් පමණක් ගනී. ඔබ මෙය මඟ හරින්නේ නම්, ඔබට පසුව ඔබගේ ඇඟිලි සලකුණු සැකසීම් තුළ සැකසිය හැක."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"උපාංගය අගුළු දමන සෑම අවස්ථාවකම"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"තිර කාලය අවසන් වීමෙන් මිනිත්තු 5කට පසුව"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"උපාංගය යළි ඇරඹීමෙන් පසුව පමණි"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"ඔබ ඔබේ රහසිගත අවකාශය සඳහා වෙනත් අගුලක් භාවිතා කරන්නේ නම්, ඔබේ රහසිගත අවකාශයේ යෙදුම් විවෘත කිරීමට ඒ ඔබ බව සත්‍යාපනය කිරීමට අවශ්‍ය විය හැක."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"රහසිගත අවකාශය සඟවන්න"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"රහසිගත අවකාශය අගුළු දමා ඇති විට එය සඟවන්න"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"ඔබේ උපාංගය මත රහසිගත අවකාශයක් ඇති බව අන් අය දැන ගැනීම වැළැක්වීමට, ඔබට එය ඔබේ යෙදුම් ලැයිස්තුවෙන් සැඟවිය හැක"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"පිහිටුවන්න"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"රහසිගත අවකාශය"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"පෞද්ගලික යෙදුම් වෙනම අවකාශයක සඟවන්න හෝ අගුළු දමන්න. අමතර සුරැකුම සඳහා කැප වූ Google ගිණුමක් භාවිත කරන්න."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"ඔබේ රහසිගත අවකාශය සකසන්න"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"ඔබේ ඉඩ සඳහා Google ගිණුමක් තෝරන්න"</b>\n" කැප කළ ගිණුමක් භාවිත කිරීම සමමුහුර්ත කළ ගොනු, ඡායාරූප සහ ඉ-තැපෑල් ඔබේ ඉඩෙන් පිටත දිස් වීම නැවැත්වීමට උපකාරී වේ"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"අගුලක් සකසන්න"</b>\n"වෙනත් පුද්ගලයින් එය විවෘත කිරීම නැවැත්වීමට ඔබේ අවකාශය අඟුළුලන්න"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"යෙදුම් ස්ථාපනය"</b>\n" ඔබේ රහසිගත අවකාශයට තමන්ගේම Play Store ඇති නිසා ඔබට පහසුවෙන් යෙදුම් ස්ථාපනය කළ හැක."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"ඔබේ පුද්ගලික අවකාශය අගුලු දමා ඇති විට ඔබේ පුද්ගලික අවකාශය තුළ ඇති යෙදුම් අවසර කළමනාකරු, පෞද්ගලිකත්ව උපකරණ පුවරුව, සහ වෙනත් සැකසීම්වල දිස් නොවෙයි.\n\nඔබේ පුද්ගලික අවකාශය නව උපාංගයකට ප්‍රතිසාධන කළ නොහැක. ඔබට එය වෙනත් උපාංගයක භාවිත කිරීමට අවශ්‍ය නම් ඔබට වෙනත් පුද්ගලික අවකාශයක් සැකසීමට අවශ්‍ය වෙයි.\n\nඔබේ උපාංගය පරිගණකයකට සම්බන්‍ධ කරන හෝ ඔබේ උපාංගය මත අනිෂ්ට යෙදුම් ස්ථාපන කරන ඕනෑම අයෙකුට ඔබේ පුද්ගලික අවකාශයට ප්‍රවේශ විය හැක."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"ඔබේ පෞද්ගලික අවකාශය අගුළු දමා ඇති විට ඔබේ පෞද්ගලික අවකාශයේ යෙදුම් අවසර කළමනාකරු, පෞද්ගලිකත්ව උපකරණ පුවරුව, සහ වෙනත් සැකසීම්වල දිස් නොවනු ඇත.\n\nඔබේ පෞද්ගලික අවකාශය නව උපාංගයකට ගෙන යා නොහැක. ඔබට එය වෙනත් උපාංගයක භාවිතා කිරීමට අවශ්‍ය නම් ඔබට වෙනත් පෞද්ගලික අවකාශයක් පිහිටුවීමට අවශ්‍ය වනු ඇත.\n\nඔබේ උපාංගය පරිගණකයකට සම්බන්ධ කරන හෝ ඔබේ උපාංගයෙහි හානිකර යෙදුම් ස්ථාපනය කරන ඕනෑම අයෙකුට ඔබේ පෞද්ගලික අවකාශයට ප්‍රවේශ විය හැක."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"රහසිගත අවකාශය ගැන තව දැන ගන්න"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"මෙයට මොහොතක් ගත වෙයි"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"පෞද්ගලික අවකාශය පිහිටුවමින්…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"පද්ධති සහතිකය"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"සහතික ඇමිණීම"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"ජාල විස්තර"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"සබ්නෙට් මාස්ක්"</string>
     <string name="server_name_title" msgid="7257095185810299066">"සේවාදායකයේ නම"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"වර්ගය"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"උපාංග Wi‑Fi MAC ලිපිනය"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"බ්ලූටූත් ලිපිනය"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"අනුක්‍රමාංකය"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"ක්‍රියාකාරීව ඇති කාලය"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"නිෂ්පාදන දිනය"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"පළමු භාවිතයේ දිනය"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"චක්‍ර ගණන"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"සංස්කරණය කරන්න"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"කාල සටහන්"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"කාල සටහන"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"ස්වයංක්‍රීයව ක්‍රියාත්මක කරන්න"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"දින දර්ශනයක් එක් කරන්න"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"ඔබේ දින දර්ශනය භාවිතා කරන්න"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"කාල සටහන"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"කාල සටහන"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"නිශ්චිත වේලාවලදී දුරකථනය නිහඬ කරන්න"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"බාධා නොකරන්න රීති සැකසීම"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"වම"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"දකුණ"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"කේස්"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"සැකසීම් පුවරුව"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"වැඩතල ප්‍රකාරය බල කරන්න"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"ද්විතීයික සංදර්ශන කෙරෙහි අත්හදා බැලීමේ වැඩතල ප්‍රකාරය බල කරන්න"</string>
