--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"ఎడమ చెవి పెయిర్ చేయి"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"వినికిడి పరికర సెట్టింగ్‌లు"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"షార్ట్‌కట్, వినికిడి పరికరంతో అనుకూలత"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"ప్రీసెట్‌లు"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"ప్రీసెట్‌లు"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"ప్రీసెట్‌ను అప్‌డేట్ చేయడం సాధ్యపడలేదు"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"ఆడియో అవుట్‌పుట్"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"ఆడియో అవుట్‌పుట్ గురించి"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"రద్దు చేయండి"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"వద్దు, థ్యాంక్స్"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"నేను అంగీకరిస్తున్నాను"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"మరింత"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"మీ ముఖంతో అన్‌లాక్ చేయండి"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"గుర్తుంచుకోండి"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"మీ ఫోన్‌ని అన్‌లాక్ చేయడం లేదా కొనుగోళ్లను ఆమోదించడం కోసం మీ వేలిముద్రను ఉపయోగించండి.\n\nగమనించండి: మీరు మీ వేలిముద్రను ఉపయోగించి ఈ డివైజ్‌ను అన్‌లాక్ చేయలేరు. మరింత సమాచారం కావాలంటే మీ నిర్వాహకులను సంప్రదించండి."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"రద్దు చేయండి"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"వద్దు, ధన్యవాదాలు"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"నేను అంగీకరిస్తున్నాను"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"వేలిముద్రను స్కిప్ చేయాలా?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"కేవలం ఒకటి రెండు నిమిషాల్లో, వేలిముద్రను సెటప్ చేయవచ్చు. మీరు ఇప్పుడు స్కిప్ చేస్తే, తర్వాత సెట్టింగ్స్‌లో వేలిముద్రను జోడించవచ్చు."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"పరికరం లాక్ అయిన ప్రతిసారీ"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"స్క్రీన్ టైమ్‌అవుట్ అయిన 5నిమిషాల తర్వాత"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"పరికరం రీస్టార్ట్ అయిన తర్వాత మాత్రమే"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"మీ ప్రైవేట్ స్పేస్ కోసం వేరే లాక్‌ను ఉపయోగిస్తే, మీ ప్రైవేట్ స్పేస్‌లో యాప్‌లను తెరిచేది మీరేనని వెరిఫై చేయాల్సి రావచ్చు."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"ప్రైవేట్ స్పేస్‌ను దాచండి"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"ప్రైవేట్ స్పేస్ లాక్ చేసి ఉన్నప్పుడు దాచండి"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"మీ పరికరంలో మీకు ప్రైవేట్ స్పేస్ ఉందని ఇతరులకు తెలియకుండా ఉండడానికి, ఆ స్పేస్‌ను మీ యాప్‌ల లిస్ట్ నుండి దాచవచ్చు"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"సెటప్ చేయండి"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"ప్రైవేట్ స్పేస్"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"ప్రైవేట్ యాప్‌లను ప్రత్యేక స్పేస్‌లో దాచండి లేదా లాక్ చేయండి. అదనపు సెక్యూరిటీ కోసం ప్రత్యేక Google ఖాతాను ఉపయోగించండి."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"మీ ప్రైవేట్ స్పేస్‌ను సెటప్ చేయండి"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"మీ స్టోరేజీ కోసం ఒక Google ఖాతాను ఎంచుకోండి"</b>\n"నిర్దిష్టంగా కేటాయించిన ఖాతాను ఉపయోగించడం వల్ల సింక్ అయిన ఫైల్స్, ఫోటోలు, ఈమెయిల్స్ మీ స్టోరేజీని దాటి బయటకు వెళ్లకుండా ఉంటాయి."</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"లాక్‌ను సెట్ చేయండి"</b>\n"మీ స్పేస్‌ను ఇతర వ్యక్తులు తెరవకుండా ఆపడానికి దాన్ని లాక్ చేయండి"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"యాప్‌లను ఇన్‌స్టాల్ చేయండి"</b>\n"మీ ప్రైవేట్ స్పేస్‌కు దాని స్వంత Play Store ఉంది కాబట్టి మీరు యాప్‌లను సులభంగా ఇన్‌స్టాల్ చేసుకోవచ్చు."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"మీ ప్రైవేట్ స్పేస్ లాక్ అయి ఉన్నప్పుడు, అందులో ఉన్న యాప్‌లు అనుమతి మేనేజర్‌లో, గోప్యతా డ్యాష్‌బోర్డ్‌లో, ఇతర సెట్టింగ్‌లలో కనిపించవు.\n\nమీ ప్రైవేట్ స్పేస్‌ను కొత్త పరికరానికి రీస్టోర్ చేయడం సాధ్యం కాదు. మీరు దానిని మరొక పరికరంలో ఉపయోగించాలంటే, మరొక ప్రైవేట్ స్పేస్‌ను సెటప్ చేయవలసి ఉంటుంది.\n\nమీ పరికరాన్ని కంప్యూటర్‌కు కనెక్ట్ చేసే లేదా మీ పరికరంలో హానికరమైన యాప్‌లను ఇన్‌స్టాల్ చేసే ఎవరైనా మీ ప్రైవేట్ స్పేస్‌ను యాక్సెస్ చేయగలరు."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"మీ ప్రైవేట్ స్పేస్ లాక్ అయి ఉన్నప్పుడు, అందులో ఉన్న యాప్‌లు అనుమతి మేనేజర్‌లో, గోప్యతా డ్యాష్‌బోర్డ్‌లో, ఇతర సెట్టింగ్‌లలో కనిపించవు.\n\nమీ ప్రైవేట్ స్పేస్‌ను కొత్త పరికరానికి తరలించడం సాధ్యం కాదు. మీరు దానిని మరొక పరికరంలో ఉపయోగించాలంటే, మరొక ప్రైవేట్ స్పేస్‌ను సెటప్ చేయవలసి ఉంటుంది.\n\nమీ పరికరాన్ని కంప్యూటర్‌కు కనెక్ట్ చేసే లేదా మీ పరికరంలో హానికరమైన యాప్‌లను ఇన్‌స్టాల్ చేసే ఎవరైనా మీ ప్రైవేట్ స్పేస్‌ను యాక్సెస్ చేయగలరు."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"ప్రైవేట్ స్పేస్ గూర్చి మరింత తెలుసుకోండి"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"దీనికి కొన్ని క్షణాలు పడుతుంది"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"ప్రైవేట్ స్పేస్ సెటప్ ప్రోగ్రెస్‌లో ఉంది…"</string>
@@ -796,7 +806,7 @@
     <string name="lockpassword_password_requires_nonletter" msgid="1185342065898300006">"{count,plural, =1{తప్పనిసరిగా కనీసం 1 అక్షరేతర గుర్తును కలిగి ఉండాలి}other{తప్పనిసరిగా కనీసం # అక్షరేతర గుర్తులను కలిగి ఉండాలి}}"</string>
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{తప్పనిసరిగా కనీసం 1 సంఖ్యేతర అక్షరాన్ని కలిగి ఉండాలి}other{తప్పనిసరిగా కనీసం # సంఖ్యేతర అక్షరాలను కలిగి ఉండాలి}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"ఇటీవలి పాస్‌వర్డ్‌ను ఉపయోగించడానికి పరికర నిర్వాహకులు అనుమతించరు"</string>
-    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"అంకెలను ఆరోహణ, అవరోహణ క్రమంలో లేదా ఒకే అంకెను వరుసగా పునరావృతంగా ఉపయోగించకూడదు"</string>
+    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"అంకెలను ఒకటి తర్వాత ఒకటి పెంచుకుంటూ లేదా తగ్గించుకుంటూ లేదా ఒకే అంకెను వరుసగా రిపీటెడ్‌గా ఉపయోగించకూడదు"</string>
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"నిర్ధారించండి"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"క్లియర్ చేయండి"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"స్క్రీన్ లాక్ ఇప్పటికే మార్చబడింది. కొత్త స్క్రీన్ లాక్‌తో మళ్లీ ట్రై చేయండి."</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"సిస్టమ్ సర్టిఫికెట్"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"సర్టిఫికెట్ పిన్నింగ్"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"నెట్‌వర్క్ వివరాలు"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"సబ్‌నెట్ మాస్క్"</string>
     <string name="server_name_title" msgid="7257095185810299066">"సర్వర్ పేరు"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"రకం"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"పరికరం Wi‑Fi MAC అడ్రస్"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"బ్లూటూత్ అడ్రస్"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"సీరియల్ నంబర్"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"చివరి రీబూట్ నుండి గడిచిన సమయం"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"తయారు చేసిన తేదీ"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"మొదటి సారి ఉపయోగించిన తేదీ"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"ఎన్నిసార్లు ఛార్జ్ అయింది"</string>
@@ -2609,7 +2622,7 @@
     <string name="battery_usage_background_less_than_one_minute" msgid="267133882897827276">"బ్యాక్‌గ్రౌండ్: నిమిషం కంటే తక్కువ"</string>
     <string name="battery_usage_screen_time_less_than_one_minute" msgid="578511021578427369">"పరికర వినియోగ వ్యవధి: నిమిషం కంటే తక్కువ"</string>
     <string name="power_usage_time_less_than_one_minute" msgid="1599706998204418081">"నిమిషం కంటే తక్కువ"</string>
-    <string name="battery_usage_for_total_time" msgid="8402254046930910905">"మొత్తం ఉపయోగం: <xliff:g id="TIME">%s</xliff:g>"</string>
+    <string name="battery_usage_for_total_time" msgid="8402254046930910905">"మొత్తం వినియోగం: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_for_background_time" msgid="9109637210617095188">"బ్యాక్‌గ్రౌండ్ సమయం: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_screen_time" msgid="3973865893520804115">"పరికర వినియోగ వ్యవధి: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_screen_footer_empty" msgid="3301144846133808193">"ఒక్కసారి పూర్తిగా ఛార్జ్ చేసిన తర్వాత కొన్ని గంటల్లో బ్యాటరీ వినియోగ డేటా అందుబాటులో ఉంటుంది"</string>
@@ -3023,7 +3036,7 @@
     <string name="user_revoke_admin_confirm_message" msgid="9207187319308572958">"ఈ యూజర్‌కు మీరు అడ్మిన్ హక్కులను తీసివేస్తే, తర్వాత ఎప్పుడైనా మీరు గానీ లేదా వేరే అడ్మిన్ గానీ, వారికి తిరిగి అడ్మిన్ హక్కులను ఇవ్వవచ్చు."</string>
     <string name="emergency_info_title" msgid="8233682750953695582">"ఎమర్జెన్సీ సమాచారం"</string>
     <string name="emergency_info_summary" msgid="8463622253016757697">"<xliff:g id="USER_NAME">%1$s</xliff:g> సంబంధిత సమాచారం &amp; కాంటాక్ట్‌లు"</string>
-    <string name="open_app_button" msgid="5025229765547191710">"<xliff:g id="APP_NAME">%1$s</xliff:g>ని తెరువు"</string>
+    <string name="open_app_button" msgid="5025229765547191710">"<xliff:g id="APP_NAME">%1$s</xliff:g>‌ను తెరవండి"</string>
     <string name="application_restrictions" msgid="276179173572729205">"యాప్‌లు మరియు కంటెంట్‌ను అనుమతించండి"</string>
     <string name="apps_with_restrictions_header" msgid="5277698582872267931">"పరిమితులు గల యాప్‌లు"</string>
     <string name="apps_with_restrictions_settings_button" msgid="2648355133416902221">"యాప్‌ సెట్టిం. విస్తరింపజేయి"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"ఎడిట్"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"షెడ్యూళ్లు"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"షెడ్యూల్"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"ఆటోమేటిక్‌గా ఆన్ చేయండి"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"క్యాలెండర్‌ను జోడించండి"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"మీ క్యాలెండర్‌ను ఉపయోగించండి"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"షెడ్యూల్"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"షెడ్యూల్"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"కొన్ని సమయాల్లో ఫోన్‌ని నిశ్శబ్దంగా ఉంచు"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"అంతరాయం కలిగించవద్దు నియమాలు సెట్ చేయండి"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"ఎడమ"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"కుడి"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"కేస్"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"సెట్టింగ్‌ల ప్యానెల్"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"ఫోర్స్ డెస్క్‌టాప్ మోడ్"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"ఇతర డిస్‌ప్లేలలో తప్పనిసరి ప్రయోగాత్మక డెస్క్‌టాప్ మోడ్"</string>
@@ -5230,7 +5241,7 @@
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"మీరు ఇన్‌స్టాల్ చేసిన యాప్‌లకు మీ పరికరం పేరు కనిపిస్తుంది. మీరు బ్లూటూత్ పరికరాలకు కనెక్ట్ చేసినప్పుడు, Wi-Fi నెట్‌వర్క్‌కు కనెక్ట్ చేసినప్పుడు లేదా Wi-Fi హాట్‌స్పాట్‌ను సెటప్ చేసినప్పుడు ఇతర వ్యక్తులకు కూడా కనబడవచ్చు."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"వ్యాకరణ లింగం"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"వ్యాకరణ లింగం ఎంచుకోండి"</string>
-    <string name="content_protection_preference_title" msgid="5069260032659193074">"మోసపూరిత యాప్‌ల కోసం స్కాన్ చేస్తోంది"</string>
+    <string name="content_protection_preference_title" msgid="5069260032659193074">"మోసపూరిత యాప్‌ల కోసం స్కాన్ చేయడం"</string>
     <string name="content_protection_preference_summary" msgid="2252393849408445391">"ఫిషింగ్ కోసం యాప్ యాక్టివిటీని చెక్ చేయండి"</string>
     <string name="content_protection_preference_user_consent_switch_title" msgid="1797782616799594426">"మోసపూరిత యాప్‌లను గుర్తించడానికి స్కానింగ్‌ను ఉపయోగించండి"</string>
     <string name="content_protection_preference_user_consent_work_profile_switch_title" msgid="3004347470520916069">"ఆఫీస్‌కు సంబంధించిన మోసపూరిత యాప్‌లను గుర్తించడానికి స్కానింగ్‌ను ఉపయోగించండి"</string>
