--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Chap quloqni ulash"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Eshitish qurilmasi sozlamalari"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Tezkor tugma, eshitish apparati bilan moslik"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Andozalar"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Andoza"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Andoza yangilanmadi"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Audio chiqishi"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Audio chiqishi haqida"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Bekor qilish"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Kerak emas"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Roziman"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Yana"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Yuzingiz bilan oching"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Yodda tuting"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Telefonni qulfdan chiqarish yoki xaridlarni tasdiqlash uchun barmoq izingizdan foydalaning.\n\nEslatma: barmoq izi orqali bu qurilmani qulfdan chiqara olmaysiz. Batafsil axborot olish uchun tashkilot administratori bilan bog‘laning."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Bekor qilish"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"Kerak emas"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Roziman"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Barmoq izi sozlanmasinmi?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Barmoq izini sozlash bir yoki ikki daqiqa vaqt oladi. Ularni keyinchalik qurilma sozlamalari orqali kiritishingiz mumkin."</string>
@@ -608,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Sozlash"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Maxfiy makon"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Maxfiy ilovalarni alohida makonda berkitish yoki qulflash mumkin Qoʻshimcha xavfsizlik uchun boshqa Google hisobidan foydalaning."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Maxfiy makoniningizni sozlash"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Makoningiz uchun Google hisobi tanlang"</b>\n"Maxsus hisobdan foydalanish sinxronlangan fayllar, fotosuratlar va email xabarlarining makoningizdan tashqarida chiqishini taqiqlaydi"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Qulfni sozlash"</b>\n"Makoningizni boshqalar ochmasligi uchun qulflang"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Ilovalarni oʻrnatish"</b>\n"Maxfiy makoningizning alohida Play Marketi bor, shuning uchun ilovalarni oson oʻrnata olasiz."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Maxfiy joy qulflanganda undagi ilovalar ruxsatlar boshqaruvi, maxfiylik paneli va boshqa sozlamalarda chiqmaydi.\n\nMaxfiy joyni yangi qurilmada tiklash imkonsiz. Boshqa qurilmada ishlatish uchun boshqa maxfiy makon sozlanishi kerak.\n\nQurilmani kompyuterga ulash yoki unga zararli ilova oʻrnatish ruxsati bor shaxslar maxfiy joyga ruxsat olishi mumkin."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Maxfiy joy qulflanganda undagi ilovalar ruxsatlar boshqaruvi, maxfiylik paneli va boshqa sozlamalarda chiqmaydi.\n\nMaxfiy joyni yangi qurilmaga koʻchirish imkonsiz. Boshqa qurilmada ishlatish uchun boshqa maxfiy joy sozlanishi kerak.\n\nQurilmani kompyuterga ulash yoki unga zararli ilova oʻrnatish ruxsati bor shaxslar maxfiy joyga ruxsat olishi mumkin."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Maxfiy makon haqida batafsil"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Bu bir necha daqiqa vaqt oladi"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Maxfiy joy sozlanmoqda…"</string>
@@ -1054,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Tizim sertifikati"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Sertifikat mahkamlash"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Tarmoq tafsilotlari"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Quyi tarmoq niqobi"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Server nomi"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Turi"</string>
@@ -1371,7 +1384,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Qurilmaning Wi‑Fi MAC manzili"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth manzili"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Seriya raqami"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Faollik vaqti"</string>
+    <string name="status_up_time" msgid="4250719389455342087">"Faollik vaqti"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Ishlab chiqarilgan sana"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Ilk foydalanish sanasi"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Davrlar soni"</string>
@@ -4780,6 +4793,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Chap"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Oʻng"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Quvvatlash gʻilofi"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Sozlamalar paneli"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Desktop rejimini majburiy ochish"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Ikkilamchi displeylarda tajribaviy desktop rejimini majburiy ochish"</string>
