--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"የግራ ጆሮን ያጣምሩ"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"የመስማት ችሎታ መሣሪያ ቅንብሮች"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"አቋራጭ፣ የመስሚያ ረዳት ተኳዃኝነት"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"ቅድመ-ቅምጦች"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"ቅድመ-ቅምጦች"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"ቅድመ-ቅምጥን ማዘመን አልተቻለም"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"የኦዲዮ ውጽዓት"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"ስለኦዲዮ ውፅዓት"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"ይቅር"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"አይ፣ አመሰግናለሁ"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"እስማማለሁ"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"ተጨማሪ"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"በመልክዎ ይክፈቱ"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"ከግምት ውስጥ ያስገቡ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"የእርስዎን ስልክ ለመክፈት ወይም ግዢዎችን ለማጽደቅ የእርስዎን የጣት አሻራ ይጠቀሙ።\n\nማስታወሻ፦ ይህን መሣሪያ ለመክፈት የጣት አሻራን መጠቀም አይችሉም። ለተጨማሪ መረጃ፣ የእርስዎን ድርጅት አስተዳዳሪ ያነጋግሩ።"</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"ይቅር"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"አይ፣ አመሰግናለሁ"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"እስማማለሁ"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"የጣት አሻራ ይዘለል?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"የጣት አሻራን ማዋቀር አንድ ወይም ሁለት ደቂቃ ብቻ ነው የሚወስደው። ይህን ከዘለሉት የጣት አሻራዎን በኋላ ላይ በቅንብሮች ውስጥ ማከል ይችላሉ።"</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"መሣሪያ በተቆለፈ ቁጥር"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"ማያ ጊዜው ካለቀ በኋላ 5 ደቂቃዎች"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"መሣሪያው እንደገና ከጀመረ ብቻ"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"ለግል ቦታዎ የተለየ ቁልፍ ከተጠቀሙ በግል ቦታዎ ውስጥ መተግበሪያዎችን ለመክፈት እርስዎ መሆንዎን ማረጋገጥ ሊኖርብዎት ይችላል።"</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"የግል ቦታን ይደብቁ"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"በሚቆለፍበት ጊዜ የግል ቦታን ይደብቁ"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"ሌሎች ሰዎች በመሣሪያዎ ላይ የግል ቦታ እንዳለዎት እንዳያውቁ ለማስቆም ከመተግበሪያዎችዎ ዝርዝር ውስጥ መደበቅ ይችላሉ"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"ያዋቅሩ"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"የግል ቦታ"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"የግል መተግበሪያዎችን በተለየ ቦታ ይደብቁ ወይም ይቆልፉ። ለተጨማሪ ደህንነት የተለየ የGoogle መለያ ይጠቀሙ።"</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"የግል ቦታዎን ያዘጋጁ"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"ለቦታዎ የGoogle መለያ ይምረጡ"</b>\n"የተለየ መለያ መጠቀም የተመሳሰሉ ፋይሎችን፣ ፎቶዎችን እና ኢሜይሎችን ከእርስዎ ቦታ ውጭ እንዳይታዩ ለማድረግ ይረዳል"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"መቆለፊያ ያዘጋጁ"</b>\n"ሌሎች ሰዎች እንዳይከፍቱት ለማድረግ ቦታዎን ይዝጉ"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"መተግበሪያዎችን ይጫኑ"</b>\n"መተግበሪያዎችን በቀላሉ መጫን እንዲችሉ የእርስዎ የግል ቦታ የራሱ የሆነ Play መደብር አለው።"</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"በግል ቦታዎ ውስጥ ያሉ መተግበሪያዎች የግል ቦታዎ ሲቆለፍ በፈቃድ አስተዳዳሪ፣ በግላዊነት ዳሽቦርድ እና በሌሎች ቅንብሮች ውስጥ አይታዩም።\n\nየግል ቦታዎ ወደ አዲስ መሣሪያ ወደነበረበት መመለስ አይችልም። የግል ቦታን በሌላ መሣሪያ ላይ መጠቀም ከፈለጉ ሌላ የግል ቦታን ማዋቀር ያስፈልግዎታል።\n\nመሣሪያዎን ከኮምፒውተር ጋር የሚያገናኝ ወይም በመሣሪያዎ ላይ ተንኮል-አዘል መተግበሪያዎችን የሚጭን ማንኛውም ሰው የግል ቦታዎን ሊደርስ ይችላል።"</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"በእርስዎ የግል ቦታ ላይ ያሉ መተግበሪያዎች የእርስዎ የግል ቦታ ሲቆለፍ በፍቃድ አስተዳዳሪ፣ በግላዊነት ዳሽቦርድ እና በሌሎች ቅንብሮች ውስጥ አይታዩም።\n\nየእርስዎ የግል ቦታ ወደ አዲስ መሣሪያ ሊወሰድ አይችልም። የግል ቦታን በሌላ መሣሪያ ላይ መጠቀም ከፈለጉ ሌላ የግል ቦታን ማዋቀር ያስፈልግዎታል።\n\nመሣሪያዎን ከኮምፒውተር ጋር የሚያገናኘው ወይም በመሣሪያዎ ላይ ጎጂ መተግበሪያዎችን የሚጭን ማንኛውም ሰው የእርስዎን የግል ቦታ ሊደርስ ይችላል።"</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"ስለግል ቦታ የበለጠ ይወቁ"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"ይህ ጥቂት ጊዜ ይወስዳል"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"የግል ቦታን በማዋቀር ላይ…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"የስርዓት የእውቅና ማረጋገጫ"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"የእውቅና ማረጋገጫን መሰካት"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"የአውታረ መረብ ዝርዝሮች"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"የንዑስ አውታር ጭንብል"</string>
     <string name="server_name_title" msgid="7257095185810299066">"የአገልጋይ ስም"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"ዓይነት"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"የመሣሪያ Wi‑Fi ማክ አድራሻ"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"የብሉቱዝ አድራሻ"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"መለያ ቁጥር"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"የቆየበት ሰዓት"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"የተመረተበት ቀን"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"ጥቅም ላይ የዋለበት የመጀመሪያ ቀን"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"የዑደት ቁጥር"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"አርትዕ"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"መርሐግብሮች"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"መርሐግብር"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"በራስ-ሰር አብራ"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"ቀን መቁጠሪያ ያክሉ"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"ቀን መቁጠሪያዎን ይጠቀሙ"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"መርሐግብር"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"መርሐግብር"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"በተወሰኑ ሰዓታት ላይ የስልክ ድምፅ አጥፋ"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"የአትረብሽ ደንቦችን ያቀናብሩ"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"ግራ"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"ቀኝ"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"መያዣ"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"የቅንብሮች ፓነል"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"የዴስክቶፕ ሁነታን አስገድድ"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"በሁለተኛ ማሳያዎች ላይ የሙከራ ዴስክቶፕ ሁነታን አስገድድ"</string>
