--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Sol qulaqlığı birləşdirin"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Eşitmə cihazı ayarları"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Qısayol, eşitmə cihazı uyğunluğu"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Hazır ayarlar"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Hazır ayarlar"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Hazır ayar güncəllənmədi"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Audio çıxışı"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Audio çıxışı haqqında"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Ləğv edin"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Yox, çox sağ olun"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Razıyam"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Daha çox"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Üzünüz ilə kildi açın"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Unutmayın"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Telefonu kiliddən çıxarmaq və ya alışları təsdiqləmək üçün barmaq izini istifadə edin.\n\nBu cihazı kiliddən çıxarmaq üçün barmaq izini istifadə edə bilməzsiniz. Ətraflı məlumat üçün təşkilat admini ilə əlaqə saxlayın."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Ləğv edin"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"Xeyr, təşəkkürlər"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Razıyam"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Barmaq izi ötürülsün?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Barmaq izinin ayarlanması bir-iki dəqiqə çəkəcək. Bu mərhələni ötürsəniz, barmaq izini sonradan ayarlarda əlavə edə bilərsiniz."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Hər dəfə cihaz kilidləndikdə"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"Ekranın sönmə müddətindən sonra 5 dəqiqə"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Yalnız cihaz yenidən başladıqdan sonra"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Şəxsi sahə üçün fərqli kilid istifadə edirsinizsə, şəxsi sahədə tətbiqləri açmaq üçün kimliyinizi doğrulamalı ola bilərsiniz."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Məxfi sahəni gizlədin"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Kilidli olduqda şəxsi sahəni gizlədin"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Digərlərinin cihazdakı şəxsi sahədən xəbərdar olmaması üçün onu tətbiq siyahısından gizlədə bilərsiniz"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Ayarlayın"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Şəxsi sahə"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Şəxsi tətbiqləri ayrıca məkanda gizlədin və ya kilidləyin. Əlavə təhlükəsizlik üçün xüsusi Google Hesabı istifadə edin."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Şəxsi sahə qurun"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Sahə üçün Google Hesabı seçin"</b>\n"Xüsusi hesabdan istifadə sinxronlaşdırılmış fayl, foto və e-məktubların sahədən kənarda görünməsinin qarşısını alır"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Kilid qurun"</b>\n"Başqalarının açmaması üçün sahəni kilidləyin"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Tətbiq quraşdırın"</b>\n"Şəxsi sahənin öz Play Marketi var. Asanlıqla tətbiq quraşdıra bilərsiniz."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Şəxsi sahə kilidləndikdə oradakı tətbiqlər icazə meneceri, məxfilik paneli və digər ayarlarda görünməyəcək.\n\nŞəxsi sahə yeni cihaza köçürülə bilməz. Başqa cihazda istifadə etmək istəsəniz, başqa bir şəxsi sahə ayarlamalısınız.\n\nCihazı kompüterə qoşan və ya cihazda zərərli tətbiqlər quraşdıran istənilən şəxs şəxsi sahəyə daxil ola bilər."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Məxfi yer kilidləndikdə məxfi yerdəki tətbiqlər icazə meneceri, məxfilik paneli və digər ayarlarda görünməyəcək.\n\nMəxfi yer yeni cihaza köçürülə bilməz. Başqa cihazda istifadə etmək istəsəniz, başqa məxfi yer ayarlamalısınız.\n\nCihazı kompüterə qoşan və ya cihazda zərərli tətbiqlər quraşdıran istənilən şəxs məxfi yerə daxil ola bilər."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Şəxsi sahə haqqında ətraflı məlumat"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Bir neçə dəqiqə çəkəcək"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Məxfi yer ayarlanır…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Sistem sertifikatı"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Sertifikatın bərkidilməsi"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Şəbəkə detalları"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Alt şəbəkə maskası"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Serverin adı"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Növ"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Cihazın Wi‑Fi MAC ünvanı"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth ünvanı"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Seriya nömrəsi"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Müddəti"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"İstehsal tarixi"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"İlk istifadə tarixi"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Dövrə sayı"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"Redaktə edin"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"Cədvəllər"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"Rejim"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"Avtomatik yandırın"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Təqvim əlavə edin"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Təqvim istifadə edin"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Cədvəl"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Rutin"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Müəyyən vaxtlarda telefonu səssiz edin"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"\"Narahat etməyin\" qaydaları ayarlayın"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Sol"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Sağ"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Qutu"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Ayarlar Paneli"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Masaüstü rejiminə keçid məcburi olsun"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Əlavə ekranlarda masaüstünün eksperimental rejiminə keçid məcburi olsun"</string>
