--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Emparejar izquierdo"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Ajustes de audífonos"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Acceso directo, compatibilidad con audífonos"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Preajustes"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Preajustes"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"No se ha podido actualizar el preajuste"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Salida de audio"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Acerca de la salida de audio"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Cancelar"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"No, gracias"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Acepto"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Más"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Desbloquea con tu cara"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Importante"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Utiliza tu huella digital para desbloquear el teléfono o aprobar compras.\n\nNota: No puedes utilizar tu huella digital para desbloquear este dispositivo. Si quieres consultar más información, ponte en contacto con el administrador de tu organización."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Cancelar"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"No, gracias"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Acepto"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"¿Saltar la configuración de huella digital?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Solo tardarás un par de minutos en configurar la huella digital. Si te saltas este paso, puedes añadir tu huella digital en otro momento desde los ajustes."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Cada vez que el dispositivo se bloquea"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 min tras tiempo de espera de pantalla"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Solo tras el reinicio del dispositivo"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Si usas un bloqueo distinto para tu espacio privado, puede que tengas que verificar que eres tú para abrir aplicaciones en tu espacio privado."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Ocultar espacio privado"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Ocultar el espacio privado cuando está bloqueado"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Para evitar que se sepa que tienes un espacio privado en tu dispositivo, puedes ocultarlo desde tu lista de aplicaciones"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Configurar"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Espacio privado"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Oculta o bloquea las aplicaciones privadas en un espacio separado. Usa una cuenta de Google exclusiva para aumentar la seguridad."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Configura tu espacio privado"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Elige una cuenta de Google para tu espacio"</b>\n"Usar una cuenta exclusiva ayuda a evitar que los archivos, las fotos y los correos sincronizados aparezcan fuera de tu espacio."</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Define un bloqueo"</b>\n"Bloquea tu espacio para evitar que otras personas lo abran."</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Instala aplicaciones"</b>\n"Tu espacio privado tiene su propia Play Store para que puedas instalar aplicaciones fácilmente."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Las aplicaciones del espacio privado no se mostrarán en el Gestor de permisos, el panel de privacidad ni en otros ajustes si el espacio privado está bloqueado.\n\nTu espacio privado no se puede restaurar en otro dispositivo. Debes configurar otro espacio privado si quieres usarlo en otro dispositivo.\n\nCualquier persona que conecte tu dispositivo a un ordenador o instale aplicaciones maliciosas en tu dispositivo podría acceder a tu espacio privado."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Las aplicaciones del espacio privado no se mostrarán en el Gestor de permisos, el panel de privacidad o en otros ajustes si el espacio privado está bloqueado.\n\nTu espacio privado no se puede trasladar a otro dispositivo. Debes configurar otro espacio privado si quieres usarlo en otro dispositivo.\n\nCualquier persona que conecte tu dispositivo a un ordenador o instale aplicaciones dañinas en tu dispositivo podría acceder a tu espacio privado."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Más información sobre el espacio privado"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Tardará un momento"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Configurando espacio privado…"</string>
@@ -665,7 +675,7 @@
     <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"Elige un bloqueo de pantalla"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"Elige un nuevo bloqueo de pantalla"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"Bloqueo de aplicaciones de trabajo"</string>
-    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Nuevo bloqueo de trabajo"</string>
+    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Elige un nuevo método de bloqueo para el trabajo"</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"Para mayor seguridad, establece un bloqueo de pantalla alternativo"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"Selecciona un método de bloqueo de pantalla alternativo"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"Si olvidas tu bloqueo de pantalla, tu administrador de TI no lo puede restablecer."</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Certificado de sistema"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Fijación de certificados"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Detalles de red"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Máscara de subred"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Nombre del servidor"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Tipo"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Dirección MAC de la red Wi‑Fi del dispositivo"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Dirección de Bluetooth"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Número de serie"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Tiempo de actividad"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Fecha de fabricación"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Fecha del primer uso"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Número de ciclos"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"Editar"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"Programaciones"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"Programación"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"Activar automáticamente"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Añade un calendario"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Usa el calendario"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Programación"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Programación"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Silenciar teléfono en ciertos momentos"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Definir reglas de No molestar"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Izquierdo"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Derecho"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Funda"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Panel de ajustes"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Forzar modo Escritorio"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Fuerza el modo Escritorio experimental en pantallas secundarias"</string>
