--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Parekatu ezkerreko audifonoa"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Entzumen-gailuen ezarpenak"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Lasterbidea eta audifonoekiko bateragarritasuna"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Aurrezarpenak"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Aurrezarpenak"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Ezin izan da eguneratu aurrezarpena"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Audio-irteera"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Audio-irteerari buruz"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Utzi"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Ez, eskerrik asko"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Ados"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Gehiago"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Desblokeatu aurpegiarekin"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Gogoan izan"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Erabili hatz-marka telefonoa desblokeatzeko eta erosketak onartzeko.\n\nOharra: ezin duzu erabili hatz-marka gailu hau desblokeatzeko. Informazio gehiago lortzeko, jarri zure erakundearen administratzailearekin harremanetan."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Utzi"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"Ez, eskerrik asko"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Ados"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Hatz-markaren urratsa saltatu?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Minutu bat edo bi baino ez dituzu beharko hatz-marka konfiguratzeko. Urrats hau saltatuz gero, geroago ere gehi dezakezu hatz-marka ezarpenetan."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Gailua blokeatzen den aldiro"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"Pantailaren denbora-muga gainditu eta 5 minutura"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Gailua berrabiarazi ondoren soilik"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Eremu pribatuan beste blokeo bat erabiltzen baduzu, baliteke zeu zarela egiaztatu behar izatea eremu pribatuko aplikazioak irekitzeko."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Ezkutatu eremu pribatua"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Ezkutatu eremu pribatua hura blokeatzean"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Inork jakin ez dezan gailuan eremu pribatu bat daukazula, aplikazio-zerrendatik ezkuta dezakezu"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Konfiguratu"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Eremu pribatua"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Ezkutatu edo blokeatu aplikazio pribatuak eremu bereiz batean. Erabili beste Google-ko kontu bat segurtasuna areagotzeko."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Konfiguratu eremu pribatua"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Aukeratu Google-ko kontu bat zure eremurako"</b>\n"Beste kontu bat erabiltzeak sinkronizatutako fitxategi, argazki eta mezu elektronikoak eremutik kanpo agertzea ekiditen du"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Ezarri blokeo bat"</b>\n"Blokeatu eremua beste pertsonek ireki ez dezaten"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Instalatu aplikazioak"</b>\n"Eremu pribatuak Play Store propioa dauka, aplikazioak erraz instala ditzazun"</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Eremu pribatua blokeatuta badago, hango aplikazioak ez dira agertuko baimenen kudeatzailean, pribatutasun-panelean eta beste ezarpenetan.\n\nEremu pribatua ezin da leheneratu beste gailu batean. Eremu pribatua beste gailu batean erabili nahi baduzu, beste bat konfiguratu beharko duzu.\n\nBaliteke zure gailua ordenagailu batekin konektatzen duten edo gailuan asmo txarreko aplikazioak instalatzen dituzten guztiek zure eremu pribatua atzitu ahal izatea."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Eremu pribatua blokeatuta badago, hango aplikazioak ez dira agertuko baimenen kudeatzailean, pribatutasun-panelean eta beste ezarpenetan.\n\nEremu pribatua ezin da eraman beste gailu batera. Eremu pribatua beste gailu batean erabili nahi baduzu, beste bat konfiguratu beharko duzu.\n\nBaliteke zure gailua ordenagailu batekin konektatzen duten edo gailuan aplikazio kaltegarriak instalatzen dituzten guztiek zure eremu pribatua atzitu ahal izatea."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Lortu eremu pribatuari buruzko informazio gehiago"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Une bat beharko da"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Eremu pribatua konfiguratzen…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Sistemaren ziurtagiria"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Ziurtagiriak ainguratzea"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Sarearen xehetasunak"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Azpisare-maskara"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Zerbitzariaren izena"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Mota"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Gailuaren wifi-sarearen MAC helbidea"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth bidez konektatzeko helbidea"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Serie-zenbakia"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Berrabiarazi ondoren abian izandako denbora"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Fabrikatze-data"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Lehen erabileraren data"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Ziklo kopurua"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"Editatu"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"Programazioak"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"Programazioa"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"Aktibatu automatikoki"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Gehitu egutegi bat"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Erabili zure egutegia"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Programazioa"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Programazioa"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Isilarazi telefonoa ordu jakinetan"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Ezarri ez molestatzeko moduaren arauak"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Ezkerrekoa"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Eskuinekoa"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Kutxa"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Ezarpenen panela"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Behartu ordenagailuetarako modua erabiltzera"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Behartu ordenagailuetarako modu esperimentala erabiltzera bigarren mailako pantailetan"</string>
