--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Associer le gauche"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Paramètres de l\'appareil auditif"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Raccourci, compatibilité avec les appareils auditifs"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Préréglages"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Préréglages"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Impossible de mettre à jour les préréglages"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Sortie audio"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"À propos de la sortie audio"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Annuler"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Non, merci"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"J\'accepte"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Plus"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Déverrouiller par reconnaissance faciale"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"À noter"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Utilisez votre empreinte digitale pour déverrouiller votre téléphone ou approuver des achats.\n\nRemarque : Vous ne pouvez pas utiliser votre empreinte digitale pour déverrouiller cet appareil. Pour en savoir plus, contactez l\'administrateur de votre entreprise."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Annuler"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"Non, merci"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"J\'accepte"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Passer cette étape ?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"La configuration de l\'empreinte digitale ne prend qu\'une minute ou deux. Si vous passez cette étape, vous pourrez ajouter votre empreinte digitale plus tard dans les paramètres."</string>
@@ -608,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Configuration"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Espace privé"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Masquez ou verrouillez vos applis privées en les regroupant dans un espace séparé. Pour plus de sécurité, utilisez un compte Google dédié."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Configurez votre espace privé"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Créez un compte Google pour votre espace"</b>\n"En utilisant un compte Google dédié vous empêchez les fichiers, photos et e-mails synchronisés d\'apparaître en dehors de votre espace."</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Activez le verrouillage"</b>\n"Verrouillez votre espace afin que personne ne puisse y accéder."</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Installez des applis"</b>\n"Votre espace privé dispose de son propre Play Store. Vous pouvez donc installer des applis facilement."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Les applis installées dans votre espace privé n\'apparaîtront ni dans le gestionnaire d\'autorisations, ni dans le tableau de bord Confidentialité. Lorsque votre espace privé est verrouillé, d\'autres paramètres sont également concernés. \n\nIl est impossible de restaurer votre espace privé sur un autre appareil. Vous devrez configurer un autre espace privé si vous souhaitez l\'utiliser sur un autre appareil.\n\nQuiconque connecte votre appareil à un ordinateur ou y installe des applis malveillantes peut avoir accès à votre espace privé."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Si vous verrouillez votre espace privé, les applis installées dans votre espace privé n\'apparaîtront pas dans le gestionnaire d\'autorisations, le tableau de bord Confidentialité, ni dans les autres paramètres.\n\nIl est impossible de basculer votre espace privé sur un autre appareil. Vous devrez configurer un autre espace privé si vous souhaitez l\'utiliser sur un autre appareil.\n\nQuiconque connecte votre appareil à un ordinateur ou y installe des applis malveillantes peut avoir accès à votre espace privé."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"En savoir plus sur l\'espace privé"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Cela peut prendre quelques instants"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Configuration de l\'espace privé…"</string>
@@ -1054,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Certificat système"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Épinglage de certificat"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Détails sur le réseau"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Masque de sous-réseau"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Nom du serveur"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Type"</string>
@@ -1214,7 +1227,7 @@
     <string name="adaptive_sleep_privacy" msgid="7664570136417980556">"Regard sur écran utilise la caméra avant pour détecter si quelqu\'un regarde l\'écran. Cette fonctionnalité s\'exécute sur l\'appareil uniquement, et les images ne sont jamais enregistrées ni envoyées à Google."</string>
     <string name="adaptive_sleep_contextual_slice_title" msgid="7467588613212629758">"Activer Regard sur l\'écran"</string>
     <string name="adaptive_sleep_contextual_slice_summary" msgid="2993867044745446094">"Garde l\'écran allumé quand vous le regardez"</string>
-    <string name="power_consumption_footer_summary" msgid="4901490700555257237">"Un délai plus long de mise en veille de l\'écran sollicitera davantage la batterie."</string>
+    <string name="power_consumption_footer_summary" msgid="4901490700555257237">"Un délai plus long avant la mise en veille de l\'écran sollicite davantage la batterie."</string>
     <string name="auto_rotate_camera_lock_title" msgid="5369003176695105872">"L\'appareil photo est verrouillé"</string>
     <string name="auto_rotate_camera_lock_summary" msgid="5699491516271544672">"Vous devez déverrouiller l\'appareil photo pour la détection de visages"</string>
     <string name="adaptive_sleep_camera_lock_summary" msgid="8417541183603618098">"L\'appareil photo doit être déverrouillé pour utiliser Regard sur écran"</string>
@@ -1371,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Adresse MAC Wi-Fi de l\'appareil"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Adresse Bluetooth"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Numéro de série"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Durée d\'activité"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Date de fabrication"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Date de première utilisation"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Nombre de cycles"</string>
@@ -2317,8 +2331,8 @@
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"À propos des appareils auditifs"</string>
     <string name="accessibility_hearing_device_footer_summary" msgid="256061045064940818">"Pour détecter d\'autres appareils auditifs qui ne sont pas pris en charge par ASHA ou LE Audio, appuyez sur "<b>"Associer un nouvel appareil"</b>" &gt; "<b>"Voir d\'autres appareils"</b></string>
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"Associer appareil auditif"</string>
-    <string name="accessibility_hearing_device_pairing_intro" msgid="7022201665808166517">"Sur cette page, vous avez la possibilité d\'associer des appareils auditifs de type ASHA et LE Audio. Vérifiez que votre appareil auditif est allumé et prêt à être associé."</string>
-    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Appareils auditifs dispos"</string>
+    <string name="accessibility_hearing_device_pairing_intro" msgid="7022201665808166517">"Vous pouvez associer des appareils auditifs ASHA et LE Audio sur cette page. Vérifiez que votre appareil auditif est allumé et prêt à être associé."</string>
+    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Appareils auditifs disponibles"</string>
     <string name="accessibility_found_all_devices" msgid="7817834722148556520">"Vous ne voyez pas votre appareil auditif ?"</string>
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"Voir d\'autres appareils"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"Réglage du son"</string>
@@ -2583,7 +2597,7 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Définir une programmation"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Prolonger l\'autonomie de la batterie"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Désactiver quand la batterie est chargée"</string>
-    <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"Éteindre à <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
+    <string name="battery_saver_sticky_title_percentage" msgid="1178162022087559148">"Désactiver à <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <string name="battery_saver_sticky_description_new" msgid="8543277078136947874">"L\'économiseur de batterie se désactive lorsque la batterie est chargée à plus de <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g>"</string>
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
@@ -2626,7 +2640,7 @@
     <string name="screen_time_category_last_full_charge" msgid="8856908320256057753">"Temps d\'utilisation depuis la dernière charge complète"</string>
     <string name="screen_time_category_for_slot" msgid="8287722270554654959">"Temps d\'utilisation (<xliff:g id="SLOT">%s</xliff:g>)"</string>
     <string name="battery_usage_spinner_view_by_apps" msgid="8769276544072098082">"Afficher par : applis"</string>
-    <string name="battery_usage_spinner_view_by_systems" msgid="7904104223212160541">"Afficher par : systèmes"</string>
+    <string name="battery_usage_spinner_view_by_systems" msgid="7904104223212160541">"Afficher par systèmes"</string>
     <string name="battery_usage_less_than_percent" msgid="5873099028895001082">"&lt; <xliff:g id="PERCENTAGE">%1$s</xliff:g>"</string>
     <string name="battery_usage_less_than_percent_content_description" msgid="6265933174815461493">"moins de <xliff:g id="PERCENTAGE">%1$s</xliff:g>"</string>
     <string name="battery_cycle_count_footer" msgid="3642121059800373545">"En raison du contrôle qualité avant livraison, il est possible que le nombre de cycles ne soit pas nul à la première utilisation"</string>
@@ -2701,7 +2715,7 @@
     <string name="cellular_security_top_intro" msgid="6749166804080092892">"Ces paramètres permettent de protéger vos appels, vos messages et vos données contre les réseaux obsolètes ou non chiffrés qui pourraient vous exposer au vol de données ou à la surveillance"</string>
     <string name="cellular_security_settings_title" msgid="7779141923670352595">"Sécurité du réseau mobile"</string>
     <string name="cellular_security_notifications" msgid="4619728340612184944">"Notifications"</string>
-    <string name="cellular_security_notifications_controller_title" msgid="4853056963523277847">"Notifications du réseau"</string>
+    <string name="cellular_security_notifications_controller_title" msgid="4853056963523277847">"Notifications relatives aux réseaux"</string>
     <string name="cellular_security_notifications_controller_summary" msgid="8339863845393759958">"Recevez une notification quand votre appareil se connecte à un réseau non chiffré ou lorsqu\'un réseau enregistre l\'identifiant unique de votre appareil ou de votre carte SIM."</string>
     <string name="cellular_security_settings_encryption_title" msgid="4013084091666375780">"Chiffrement"</string>
     <string name="cellular_security_network_generations_title" msgid="2343026988833783854">"Générations de réseaux"</string>
@@ -3665,7 +3679,7 @@
     <string name="notification_badge_title" msgid="6854537463548411313">"Autoriser la pastille de notification"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"Afficher la pastille de notification"</string>
     <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"Ignorer Ne pas déranger"</string>
-    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"Laisser ces notifications s\'exécuter quand Ne pas déranger est activé"</string>
+    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"Autoriser l\'affichage de ces notifications quand Ne pas déranger est activé"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"Écran de verrouillage"</string>
     <string name="app_notifications_dialog_done" msgid="573716608705273004">"OK"</string>
     <string name="notification_show_lights_title" msgid="5564315979007438583">"Clignotement"</string>
@@ -3870,7 +3884,7 @@
     <string name="runtime_permissions_summary_no_permissions_requested" msgid="7174876170116073356">"Aucune autorisation demandée"</string>
     <string name="runtime_permissions_summary_control_app_access" msgid="3744591396348990500">"Contrôler l\'accès des applications à vos données"</string>
     <string name="permissions_usage_title" msgid="2942741460679049132">"Tableau de bord Confidentialité"</string>
-    <string name="permissions_usage_summary" msgid="6784310472062516454">"Afficher les applis qui ont récemment utilisé des autorisations"</string>
+    <string name="permissions_usage_summary" msgid="6784310472062516454">"Affichez les applis qui ont récemment utilisé des autorisations"</string>
     <string name="unused_apps" msgid="4566272194756830656">"Applis inutilisées"</string>
     <string name="unused_apps_summary" msgid="4236371818881973021">"{count,plural, =1{# appli inutilisée}one{# appli inutilisée}other{# applis inutilisées}}"</string>
     <string name="unused_apps_category" msgid="8954930958175500851">"Paramètres de l\'appli si inutilisée"</string>
@@ -4780,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Gauche"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Droite"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Étui de transport"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Panneau des paramètres"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Forcer le mode ordinateur"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Forcer le mode ordinateur expérimental sur les écrans secondaires"</string>
@@ -4908,8 +4924,8 @@
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Autoriser les applications pouvant se superposer à d\'autres à se superposer aux écrans de paramètres"</string>
     <string name="allow_mock_modem" msgid="3832264806530479214">"Autoriser le modem fictif"</string>
     <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Autoriser cet appareil à exécuter le service de modem fictif pour les tests d\'instrumentation. Ne pas l\'activer lors d\'une utilisation normale du téléphone"</string>
-    <string name="disable_screen_share_protections_for_apps_and_notifications" msgid="4987116103699222633">"Désactiver les protections de partage d\'écran"</string>
-    <string name="disable_screen_share_protections_for_apps_and_notifications_summary" msgid="5379583403909210858">"Désactivez les protections système du contenu sensible d\'application pour les sessions de partage d\'écran à venir"</string>
+    <string name="disable_screen_share_protections_for_apps_and_notifications" msgid="4987116103699222633">"Désactiver les protections lors du partage d\'écran"</string>
+    <string name="disable_screen_share_protections_for_apps_and_notifications_summary" msgid="5379583403909210858">"Désactiver les protections système qui masquent les contenus d\'application sensibles lorsque vous partagez votre écran"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Multimédia"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Épingler le lecteur multimédia"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Pour reprendre rapidement la lecture, le lecteur multimédia reste ouvert dans les Réglages rapides"</string>
