--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"მარცხენა დინამიკის დაკავშირება"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"სმენის აპარატის პარამეტრები"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"მალსახმობი, სმენის აპარატებთან თავსებადობა"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"წინასწარ დაყენებულები"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"წინასწარ დაყენებული"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"წინასწარ დაყენებულის განახლება ვერ მოხერხდა"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"გამომავალი აუდიო"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"აუდიოს გამოსატანის შესახებ"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"გაუქმება"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"არა, გმადლობთ"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"ვეთანხმები"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"მეტი"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"განბლოკეთ სახის მეშვეობით"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"გაითვალისწინეთ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"გამოიყენეთ თქვენი თითის ანაბეჭდი ტელეფონის განსაბლოკად ან შენაძენების დასადასტურებლად.\n\nგაითვალისწინეთ: თითის ანაბეჭდს ამ მოწყობილობის განსაბლოკად ვერ გამოიყენებთ. დამატებითი ინფორმაციისთვის დაუკავშირდით თქვენი ორგანიზაციის ადმინისტრატორს."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"გაუქმება"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"არა, გმადლობთ"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"თანახმა ვარ"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"გსურთ თითის ანაბეჭდის დაყენების გამოტოვება?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"თითის ანაბეჭდის დაყენებას მხოლოდ რამდენიმე წუთი სჭირდება. თუ ამ ეტაპს გამოტოვებთ, თითის ანაბეჭდის მოგვიანებით დამატებას პარამეტრებში შეძლებთ."</string>
@@ -567,7 +569,7 @@
     <string name="private_space_face_enroll_introduction_info_less_secure" msgid="8460719783943533172">"თქვენი კერძო სივრცის სახით განბლოკვა, შესაძლოა, ძლიერ ნიმუშზე, PIN-კოდსა და პაროლზე ნაკლებად დაცული იყოს"</string>
     <string name="private_space_face_settings_require_attention_details" msgid="2799569069549999689">"კერძო სივრცის განსაბლოკად თვალები გახელილი უნდა გქონდეთ. საუკეთესო შედეგის მისაღებად მოიხსენით მზის სათვალე."</string>
     <string name="private_space_face_settings_footer" msgid="7722256209563543711">"ახლა უკვე შეგიძლიათ სახით კერძო სივრცის განბლოკვა.\n\nგახსოვდეთ:\nერთდროულად მხოლოდ ერთი სახის დაყენება შეიძლება. სხვა სახის დასაყენებლად, წაშალეთ მიმდინარე.\n\nტელეფონზე დახედვამ შეიძლება უნებლიეთ განბლოკოს ის, თქვენი სურვილის საწინააღმდეგოდ.\n\nთქვენი კერძო სივრცე შეიძლება განბლოკოს უცხო პირმა, თუ მოწყობილობას სახესთან მოგიტანთ.\n\nთქვენი კერძო სივრცე შეიძლება განბლოკოს უცხო პირმა, მაგალითად, ტყუპისცალმა."</string>
-    <string name="private_space_face_settings_require_confirmation_details" msgid="5406498664903812249">"სახით განბლოკვის გამოყენებისას ყოველთვის მოითხოვეთ დადასტურების ნაბიჯი"</string>
+    <string name="private_space_face_settings_require_confirmation_details" msgid="5406498664903812249">"სახით განბლოკვის გამოყენებისას ყოველთვის მოითხოვეთ დადასტურება"</string>
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"განბლოკვის ხერხები"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"მოწყობილობის იდენტური ეკრანის დაბლოკვის მეთოდი"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"კერძო სივრცისთვის ახალი საკეტის არჩევა"</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"ყოველთვის, როდესაც მოწყობილობა ჩაიკეტება"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"ეკრანის ავტომატურად გამორთვიდან 5 წუთში"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"მხოლოდ მოწყობილობის გადატვირთვის შემდეგ"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"თუ იყენებთ სხვა საკეტს თქვენი კერძო სივრცისთვის, შეიძლება დაგჭირდეთ თქვენი ვინაობის დადასტურება კერძო სივრცეში აპების გასახსნელად."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"კერძო სივრცის დამალვა"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"კერძო სივრცის დამალვა ჩაკეტვის დროს"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"თუ არ გსურთ, სხვებმა იცოდნენ, რომ თქვენს მოწყობილობაზე კერძო სივრცე გაქვთ, შეგიძლიათ, დამალოთ იგი თქვენი აპების გვერდიდან"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"დაყენება"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"კერძო სივრცე"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"დამალეთ ან ჩაკეტეთ პირადი აპები ცალკე სივრცეში. დამატებითი უსაფრთხოებისთვის გამოიყენეთ სპეციალური Google ანგარიში."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"თქვენი კერძო სივრცის დაყენება"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Google ანგარიშის არჩევა თქვენი სივრცისთვის"</b>\n"სპეციალური ანგარიშის გამოყენება სინქრონიზებული ფაილების, ფოტოებისა და ელფოსტის თქვენი სივრცის გარეთ გამოჩენას შეუშლის ხელს"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"ჩაკეტვის დაყენება"</b>\n"ჩაკეტეთ თქვენი სივრცე, რათა სხვებმა არ გახსნან"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"აპების ინსტალაცია"</b>\n"თქვენს კერძო სივრცეს თავისი Play Store აქვს, შესაბამისად, აპების ინსტალაცია მარტივად შეგიძლიათ."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"თქვენს კერძო სივრცეში არსებული აპები არ გამოჩნდება ნებართვების მმართველში, კონფიდენციალურობის საინფორმაციო დაფასა და სხვა პარამეტრებში, როდესაც თქვენი კერძო სივრცე ჩაკეტილია.\n\nთქვენი კერძო სივრცის ახალ მოწყობილობაში აღდგენა შეუძლებელია. თქვენ უნდა დააყენოთ სხვა კერძო სივრცე, თუ გსურთ მისი სხვა მოწყობილობაზე გამოყენება.\n\nნებისმიერს, ვინც თქვენს მოწყობილობას აკავშირებს კომპიუტერთან ან დააინსტალირებს მავნე აპებს თქვენს მოწყობილობაზე, შეიძლება ჰქონდეს წვდომა თქვენს კერძო სივრცეზე."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"თქვენს კერძო სივრცეში არსებული აპები არ გამოჩნდება ნებართვების მენეჯერში, კონფიდენციალურობის საინფორმაციო დაფაში და სხვა პარამეტრებში, როდესაც თქვენი კერძო სივრცე დაბლოკილია.\n\nთქვენი კერძო სივრცის ახალ მოწყობილობაში გადატანა შეუძლებელია. თქვენ უნდა დააყენოთ სხვა კერძო სივრცე, თუ გსურთ მისი სხვა მოწყობილობაზე გამოყენება.\n\nნებისმიერს, ვინც თქვენს მოწყობილობას აკავშირებს კომპიუტერთან ან დააინსტალირებს მავნე აპებს თქვენს მოწყობილობაზე, შეიძლება ჰქონდეს წვდომა თქვენს კერძო სივრცეში."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"შეიტყვეთ მეტი კერძო სივრცის შესახებ"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"ამას ცოტა ხანი დასჭირდება"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"მიმდინარეობს პირადი სივრცის დაყენება…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"სისტემის სერტიფიკატი"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"სერტიფიკატის ჩამაგრება"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"ქსელის დეტალები"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"ქვექსელის ნიღაბი"</string>
     <string name="server_name_title" msgid="7257095185810299066">"სერვერის სახელი"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"ტიპი"</string>
@@ -1372,7 +1384,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"მოწყობილობის Wi‑Fi MAC მისამართი"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth მისამართი"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"სერიული ნომერი"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"მუშაობის დრო"</string>
+    <string name="status_up_time" msgid="4250719389455342087">"მუშაობის დრო"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"წარმოების თარიღი"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"პირველი გამოყენების თარიღი"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"ციკლების რაოდენობა"</string>
@@ -3330,14 +3342,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"რედაქტირება"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"განრიგები"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"განრიგი"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"ავტომატურად ჩართვა"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"კალენდრის დამატება"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"თქვენი კალენდრის გამოყენება"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"განრიგი"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"განრიგი"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"ტელეფონის დადუმება გარკვეულ მომენტებში"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"„არ შემაწუხოთ“ რეჟიმის წესების დაყენება"</string>
@@ -3762,7 +3770,7 @@
     <string name="zen_mode_events_list" msgid="7191316245742097229">"მოვლენები"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"მოვლენები"</string>
     <string name="zen_mode_apps_title" msgid="1691010857014041183">"აპები"</string>
-    <string name="zen_mode_apps_category" msgid="4082380323683889391">"აპები, რომლებსაც შეწყვეტა შეუძლია"</string>
+    <string name="zen_mode_apps_category" msgid="4082380323683889391">"აპები, რომლებსაც შეწყვეტა შეუძლიათ"</string>
     <string name="zen_mode_apps_priority_apps" msgid="7386196048313716076">"არჩეული აპები"</string>
     <string name="zen_mode_apps_none_apps" msgid="2493642312793604327">"არცერთი"</string>
     <string name="zen_mode_apps_all_apps" msgid="705700582778445484">"ყველა"</string>
@@ -4785,6 +4793,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"მარცხენა"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"მარჯვენა"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"ფუტლარი"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"პარამეტრების პანელი"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"დესკტოპის რეჟიმის იძულებით გააქტიურება"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"დესკტოპის ექსპერიმენტული რეჟიმის იძულებით გააქტიურება მეორეულ ეკრანებზე"</string>
