--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Сол кулакты жупташтыруу"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Угуу аппаратынын параметрлери"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Ыкчам баскыч, угуу аппаратынын шайкештиги"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Алдын ала коюлган параметрлер"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Алдын ала коюлган параметрлер"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Алдын ала коюлган параметрлер жаңыртылган жок"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Аудио түзмөк"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Аудио түзмөк жөнүндө"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Баш тартуу"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Жок, рахмат"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Макул"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Дагы"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Кулпуну жүзүңүз менен ачасыз"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Көңүл буруңуз"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Манжаңыздын изи менен, телефонуңуздун кулпусун ачып, ар кандай нерселерди сатып ала аласыз.\n\nЭскертүү: Бул түзмөктүн кулпусун манжаңыздын изи менен ачууга болбойт. Кененирээк маалымат алгыңыз келсе, ишканаңыздын администраторуна кайрылыңыз."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Жок"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"Жок, рахмат"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Макул"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Манжа издерин койбойсузбу?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Манжаңыздын изин бир-эки мүнөттүн ичинде эле коесуз. Азыр койгуңуз келбесе, кийинчерээк кошуп койсоңуз болот."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Түзмөк кулпуланган сайын"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"Экран өчкөндөн 5 мүнөттөн кийин"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Түзмөк өчүп күйгөндөн кийин гана"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Эгер жеке мейкиндик үчүн башка кулпуну колдонсоңуз, колдонмолорду жеке мейкиндикте ачуу үчүн бул сиз экениңизди ырасташыңыз керек болот."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Жеке мейкиндикти жашыруу"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Жеке мейкиндик кулпуланганда жашыруу"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Жеке мейкиндикти колдонмолордун тизмесинен жашырып койсоңуз болот"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Тууралоо"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Жеке мейкиндик"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Жеке колдонмолоруңуз үчүн мейкиндик түзүп, каалаган учурда жашырып же кулпулап коёсуз. Коопсуздук максатында өзүнчө Google аккаунтун колдонуңуз."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Жеке мейкиндигиңизди орнотуңуз"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Жеке мейкиндигиңиз үчүн Google аккаунтун тандаңыз"</b>\n"Өзүнчө аккаунтту колдонсоңуз, шайкештирилген файлдар, сүрөттөр жана электрондук каттар мейкиндигиңизден тышкары жерде көрүнбөйт"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Кулпу коюңуз"</b>\n"Башкалар ачып албашы үчүн жеке мейкиндигиңизди кулпулап коюңуз"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Колдонмолорду орнотуңуз"</b>\n"Жеке мейкиндикте Play Store бар болгондуктан, колдонмолорду оңой орното аласыз."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Жеке мейкиндигиңиздеги кулпуланган учурда андагы колдонмолор уруксаттарды башкаргычта, купуялык тактасында жана башка параметрлерде көрүнбөйт.\n\nЖеке мейкиндигиңиз жаңы түзмөктө калыбына келтирүүгө болбойт. Эгер жеке мейкиндикти башка түзмөктө колдонгуңуз келсе, башка жеке чөйрөнү тууралашыңыз керек болот.\n\nТүзмөгүңүздү компьютерге туташтырган же ага зыянкеч колдонмолорду орноткон кишилер жеке чөйрөңүзгө кире алат."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Жеке мейкиндигиңиз кулпуланган учурда, андагы колдонмолор уруксаттарды башкаргычта, купуялык тактасында жана башка параметрлерде көрүнбөйт.\n\nЖеке мейкиндигиңизди башка түзмөккө өткөрө албайсыз. Жаңы түзмөктө жаңы мейкиндик түзүшүңүз керек.\n\nЖеке мейкиндигиңизге түзмөгүңүзгө кесепеттүү колдонмолорду орноткон же аны өз компьютерине кошуп алган адам кире алат."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Жеке мейкиндик тууралуу кеңири маалымат"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Буга аз эле убакыт кетет"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Жеке мейкиндик туураланууда…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Тутумдун тастыктамасы"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Тастыктаманы кадап коюу"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Тармактын чоо-жайы"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Көмөкчү тармактын маскасы"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Сервердин аталышы"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Түрү"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Түзмөктүн Wi‑Fi MAC дареги"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth дареги"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Сериялык номери"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Түзмөк күйгүзүлгөндөн берки убакыт"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Жасалган күнү"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Биринчи жолу колдонулган күнү"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Циклдердин саны"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"Түзөтүү"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"Ырааттамалар"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"Ырааттама"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"Автоматтык түрдө күйөт"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Жылнаама кошуу"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Жылнааманы колдонуу"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"График"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Ырааттама"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Телефондун үнүн өчүрүүнү жөндөө"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"\"Тынчымды алба\" режиминин эрежелерин коюу"</string>
@@ -3608,8 +3617,8 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Бул колдонмодо кеңири жөндөөлөр колдоого алынбайт"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Дагы параметрлер"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Бул колдонмодо кошумча параметрлер бар"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"Муздап калуу"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"Муздап калууну колдонуу"</string>
+    <string name="notification_polite_title" msgid="3801775758735739286">"Солгундоо"</string>
+    <string name="notification_polite_main_control_title" msgid="855117131309844580">"Солгундоону колдонуу"</string>
     <string name="notification_polite_description" msgid="6414215800132666462">"Кыска убакыттын ичинде көп сандагы билдирмелерди алганыңызда, түзмөгүңүз экрандагы үн чыгарылышын жана калкыма терезелерди азайтат. Чалуулар, ойготкучтар жана маанилүү жазышуулар дагы эле кадимкидей кабарланат жана бардык жөнөтүлгөн билдирмелерди билдирмелер тактасынан оңой табууга болот."</string>
     <string name="notification_polite_work" msgid="8823596456640216391">"Жумуш профилдерине колдонуу"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"Жумуш профилинин колдонмолоруна карата пайдаланыңыз"</string>
@@ -3922,7 +3931,7 @@
     <string name="high_power_apps" msgid="5623152700992102510">"Батареяны үнөмдөө"</string>
     <string name="high_power_filter_on" msgid="447849271630431531">"Батарея үнөмдөлбөйт"</string>
     <string name="high_power_on" msgid="8778058701270819268">"Батарянын кубатын үнөмдөшпөйт"</string>
-    <string name="high_power_off" msgid="317000444619279018">"Батареянын кубатын үнөмдөө иштетилген"</string>
+    <string name="high_power_off" msgid="317000444619279018">"Батареяны үнөмдөө иштетилген"</string>
     <string name="high_power_system" msgid="3966701453644915787">"Кубатты үнөмдөөнү иштетүү мүмкүн эмес"</string>
     <string name="high_power_prompt_title" msgid="2574478825228409124">"Колдонмо фондо тынымсыз иштей берсинби?"</string>
     <string name="high_power_prompt_body" msgid="6029266540782139941">"<xliff:g id="APP_NAME">%1$s</xliff:g> фондо тынымсыз иштей берсе, батареянын кубаты тез сарпталышы мүмкүн. \n\nМуну кийин Параметрлер &gt; Колдонмолордон өзгөртө аласыз."</string>
@@ -4005,7 +4014,7 @@
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Үнөмдөлбөсүн"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Үнөмдөө"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Батареяңыз тез эле отуруп калышы мүмкүн. Мындан ары колдонмонун батареяны фондо сарптоосу чектелбейт."</string>
-    <string name="ignore_optimizations_off_desc" msgid="3324571675983286177">"Батареянын кубатын үнөмдөө үчүн сунушталат."</string>
+    <string name="ignore_optimizations_off_desc" msgid="3324571675983286177">"Батареяны үнөмдөө үчүн сунушталат."</string>
     <string name="app_list_preference_none" msgid="1635406344616653756">"Жок"</string>
     <string name="work_profile_usage_access_warning" msgid="3477719910927319122">"Бул колдонмо пайдаланган нерселердин таржымалын көрүү мүмкүнчүлүгү өчүрүлсө да, администраторуңуз ал маалыматтарды жумуш профилиңизден көрө берет"</string>
     <string name="draw_overlay" msgid="7902083260500573027">"Башка колдонмолордун үстүнөн"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Сол"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Оң"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Кутуча"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Параметрлер панели"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Иш такта режимин күйгүзүү"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Иш тактанын сынамык режими көмөкчү экрандарда мажбурлап иштетилет"</string>
@@ -4913,8 +4924,8 @@
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Башка колдонмолордун үстүнөн көрүнгөн колдонмолорго Параметрлер экрандарынын үстүнөн да көрүнүүгө уруксат берилет"</string>
     <string name="allow_mock_modem" msgid="3832264806530479214">"Mock Modem\'ге уруксат берүү"</string>
     <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Модемдин ордуна колдонулуучу кызматты иштетүүгө уруксат берип, сынап көрөсүз. Телефон кадимки режимде колдонулуп жатканда, бул параметрди иштетпеңиз."</string>
-    <string name="disable_screen_share_protections_for_apps_and_notifications" msgid="4987116103699222633">"Экран бөлүшүүдөн коргоону өчүрүү"</string>
-    <string name="disable_screen_share_protections_for_apps_and_notifications_summary" msgid="5379583403909210858">"Жакында боло турган экранды бөлүшүү сеанстарынын купуя колдонмо контенти үчүн тутум коргоосун өчүрүңүз"</string>
+    <string name="disable_screen_share_protections_for_apps_and_notifications" msgid="4987116103699222633">"Экранды көрсөтүп жатканда коргоону өчүрүү"</string>
+    <string name="disable_screen_share_protections_for_apps_and_notifications_summary" msgid="5379583403909210858">"Келечекте экранды бөлүшүү сеанстарында колдонмолордогу купуя нерселерди коргогон системдик каражаттар иштебей калат"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Медиа"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Медиа ойноткучту кадап коюу"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Угуп жаткан нерсени оңой улантып кетүү үчүн медиа ойноткуч Ыкчам жөндөөлөрдө ачылып турат"</string>
