--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"ຈັບຄູ່ຫູຊ້າຍ"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"ການຕັ້ງຄ່າອຸປະກອນຊ່ວຍຟັງ"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"ທາງລັດ, ການໃຊ້ຮ່ວມກັນໄດ້ຂອງເຄື່ອງຊ່ວຍຟັງ"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"ການຕັ້ງຄ່າລ່ວງໜ້າ"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"ການຕັ້ງຄ່າລ່ວງໜ້າ"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"ບໍ່ສາມາດອັບເດດການຕັ້ງຄ່າລ່ວງໜ້າໄດ້"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"ເອົ້າພຸດສຽງ"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"ກ່ຽວກັບເອົ້າພຸດສຽງ"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"ຍົກເລີກ"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"ບໍ່, ຂອບໃຈ"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"ຂ້ອຍຍອມຮັບ"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"ເພີ່ມເຕີມ"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"ປົດລັອກດ້ວຍໃບໜ້າຂອງທ່ານ"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"ຂໍ້ຄວນຈື່"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"ໃຊ້ລາຍນິ້ວມືຂອງທ່ານເພື່ອປົດລັອກໂທລະສັບ ຫຼື ອະນຸມັດການສັ່ງຊື້.\n\nໝາຍເຫດ: ທ່ານບໍ່ສາມາດໃຊ້ນິ້ວມືຂອງທ່ານເພື່ອປົດລັອກອຸປະກອນນີ້ໄດ້. ສຳລັບຂໍ້ມູນເພີ່ມເຕີມ, ໃຫ້ຕິດຕໍ່ຜູ້ເບິ່ງແຍງລະບົບອົງກອນຂອງທ່ານ."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"​ຍົກ​ເລີກ"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"ບໍ່, ຂອບໃຈ"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"ຂ້ອຍຍອມຮັບ"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"ຂ້າມລາຍນິ້ວມືບໍ?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"ການຕັ້ງຄ່າລາຍນິ້ວມືຈະໃຊ້ເວລາພຽງໜຶ່ງ ຫຼື ສອງນາທີເທົ່ານັ້ນ. ຫາກທ່ານຂ້າມຂັ້ນຕອນນີ້, ທ່ານຈະສາມາດເພີ່ມລາຍນິ້ວມືໄດ້ໃນພາຍຫຼັງໂດຍການໄປທີ່ການຕັ້ງຄ່າ."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"ທຸກເທື່ອທີ່ອຸປະກອນລັອກ"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 ນາທີຫຼັງຈາກໄລຍະໝົດເວລາໜ້າຈໍ"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"ຫຼັງຈາກຣີສະຕາດອຸປະກອນເທົ່ານັ້ນ"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"ຫາກທ່ານໃຊ້ການລັອກອື່ນສຳລັບພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານ, ທ່ານອາດຕ້ອງຢັ້ງຢືນວ່າແມ່ນທ່ານເພື່ອເປີດແອັບໃນພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານ."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"ເຊື່ອງພື້ນທີ່ສ່ວນບຸກຄົນໄວ້"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"ເຊື່ອງພື້ນທີ່ສ່ວນບຸກຄົນເມື່ອມັນຖືກລັອກໄວ້"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"ເພື່ອບໍ່ໃຫ້ຄົນອື່ນຮູ້ວ່າທ່ານມີພື້ນທີ່ສ່ວນບຸກຄົນຢູ່ອຸປະກອນຂອງທ່ານ, ທ່ານສາມາດເຊື່ອງມັນຈາກລາຍຊື່ແອັບຂອງທ່ານໄດ້"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"ຕັ້ງຄ່າ"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"ພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"ເຊື່ອງ ຫຼື ລັອກແອັບສ່ວນຕົວໃນພື້ນທີ່ແຍກຕ່າງຫາກ. ໃຊ້ບັນຊີ Google ສະເພາະເພື່ອຄວາມປອດໄພພິເສດ."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"ຕັ້ງຄ່າພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານ"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"ເລືອກບັນຊີ Google ສຳລັບພື້ນທີ່ຂອງທ່ານ"</b>\n"ການໃຊ້ບັນຊີສະເພາະຊ່ວຍຢຸດການຊິງຄ໌ໄຟລ໌, ຮູບພາບ ແລະ ອີເມວທີ່ປາກົດຢູ່ນອກພື້ນທີ່ຂອງທ່ານ"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"ຕັ້ງລັອກ"</b>\n"ລັອກພື້ນທີ່ຂອງທ່ານ ເພື່ອບໍ່ໃຫ້ຄົນອື່ນເປີດມັນ"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"ຕິດຕັ້ງແອັບ"</b>\n"ພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານມີ Play Store ຂອງມັນເອງ ເພື່ອໃຫ້ທ່ານສາມາດຕິດຕັ້ງແອັບຕ່າງໆໄດ້ຢ່າງງ່າຍດາຍ."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"ແອັບໃນພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານຈະບໍ່ປາກົດໃນຕົວຈັດການສິດອະນຸຍາດ, ແຜງໜ້າປັດຄວາມເປັນສ່ວນຕົວ ແລະ ການຕັ້ງຄ່າອື່ນໆເມື່ອລັອກພື້ນທີ່ສ່ວນຕົວຂອງທ່ານ.\n\nລະບົບບໍ່ສາມາດກູ້ຄືນພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານໄປຫາອຸປະກອນໃໝ່ໄດ້. ທ່ານຈະຕ້ອງຕັ້ງຄ່າພື້ນທີ່ສ່ວນບຸກຄົນໃໝ່ຫາກທ່ານຕ້ອງການໃຊ້ຢູ່ອຸປະກອນອື່ນ.\n\nໃຜກໍຕາມທີ່ເຊື່ອມຕໍ່ອຸປະກອນຂອງທ່ານກັບຄອມພິວເຕີ ຫຼື ຕິດຕັ້ງແອັບທີ່ເປັນອັນຕະລາຍໃນອຸປະກອນຂອງທ່ານອາດສາມາດເຂົ້າເຖິງພື້ນທີ່ສ່ວນຕົວຂອງທ່ານໄດ້."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"ແອັບໃນພື້ນທີ່ສ່ວນຕົວຂອງທ່ານຈະບໍ່ປາກົດໃນຕົວຈັດການສິດອະນຸຍາດ, ແຜງໜ້າປັດຄວາມເປັນສ່ວນຕົວ ແລະ ການຕັ້ງຄ່າອື່ນໆເມື່ອລັອກພື້ນທີ່ສ່ວນຕົວຂອງທ່ານ.\n\nລະບົບບໍ່ສາມາດຍ້າຍພື້ນທີ່ສ່ວນຕົວຂອງທ່ານໄປຫາອຸປະກອນໃໝ່ໄດ້. ທ່ານຈະຕ້ອງຕັ້ງຄ່າພື້ນທີ່ສ່ວນຕົວໃໝ່ຫາກທ່ານຕ້ອງການໃຊ້ຢູ່ອຸປະກອນອື່ນ.\n\nໃຜກໍຕາມທີ່ເຊື່ອມຕໍ່ອຸປະກອນຂອງທ່ານກັບຄອມພິວເຕີ ຫຼື ຕິດຕັ້ງແອັບທີ່ເປັນອັນຕະລາຍໃນອຸປະກອນຂອງທ່ານອາດສາມາດເຂົ້າເຖິງພື້ນທີ່ສ່ວນຕົວຂອງທ່ານໄດ້."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"ສຶກສາເພີ່ມເຕີມກ່ຽວກັບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"ຂັ້ນຕອນນີ້ຈະໃຊ້ເວລາໄລຍະໜຶ່ງ"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"ກຳລັງຕັ້ງຄ່າພື້ນທີ່ສ່ວນຕົວ…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"ໃບຮັບຮອງລະບົບ"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"ການປັກໝຸດໃບຮັບຮອງ"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"ລາຍລະອຽດເຄືອຂ່າຍ"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Subnet Mask"</string>
     <string name="server_name_title" msgid="7257095185810299066">"ຊື່ເຊີບເວີ"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"ປະເພດ"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"ທີ່ຢູ່ Wi‑Fi MAC ຂອງອຸປະກອນ"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"ທີ່ຢູ່ Bluetooth"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"ໝາຍເລກຊີຣຽວ"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"ເວລາເປີດນຳໃຊ້"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"ວັນທີທີ່ຜະລິດ"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"ວັນທີທີ່ນຳໃຊ້ເທື່ອທຳອິດ"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"ຈຳນວນຮອບ"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"ແກ້ໄຂ"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"ການກຳນົດເວລາ"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"ກຳນົດເວລາ"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"ເປີດອັດຕະໂນມັດ"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"ເພີ່ມປະຕິທິນ"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"ໃຊ້ປະຕິທິນຂອງທ່ານ"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"ກຳນົດເວລາ"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"ກຳນົດເວລາ"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"ປິດສຽງໂທລະສັບໃນບາງເວລາ"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"ຕັ້ງກົດຂອງການຫ້າມລົບກວນ"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"ຊ້າຍ"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"ຂວາ"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"ເຄສ"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"ແຜງການຕັ້ງຄ່າ"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"ບັງຄັບໂໝດເດັສທັອບ"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"ບັງຄັບໂໝດເດັສທັອບແບບທົດລອງໃຊ້ຢູ່ໜ້າຈໍທີສອງ"</string>
@@ -4914,7 +4925,7 @@
     <string name="allow_mock_modem" msgid="3832264806530479214">"ອະນຸຍາດ Mock Modem"</string>
     <string name="allow_mock_modem_summary" msgid="9097416612748005374">"ອະນຸຍາດໃຫ້ອຸປະກອນນີ້ເອີ້ນໃຊ້ບໍລິການ Mock Modem ສຳລັບການທົດສອບເຄື່ອງມືໄດ້. ກະລຸນາຢ່າເປີດການນຳໃຊ້ສິ່ງນີ້ໃນລະຫວ່າງການໃຊ້ໂທລະສັບຕາມປົກກະຕິ"</string>
     <string name="disable_screen_share_protections_for_apps_and_notifications" msgid="4987116103699222633">"ປິດການນຳໃຊ້ການປົກປ້ອງການແບ່ງປັນໜ້າຈໍ"</string>
-    <string name="disable_screen_share_protections_for_apps_and_notifications_summary" msgid="5379583403909210858">"ປິດການປົກປ້ອງລະບົບສຳລັບເນື້ອຫາແອັບທີ່ລະອຽດອ່ອນສຳລັບເຊດຊັນການແບ່ງປັນໜ້າຈໍທີ່ຈະມາເຖິງ"</string>
+    <string name="disable_screen_share_protections_for_apps_and_notifications_summary" msgid="5379583403909210858">"ປິດການປົກປ້ອງລະບົບສຳລັບເນື້ອຫາແອັບທີ່ລະອຽດອ່ອນໃນເຊດຊັນການແບ່ງປັນໜ້າຈໍທີ່ຈະມາເຖິງ"</string>
     <string name="media_controls_title" msgid="403271085636252597">"ມີເດຍ"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"ປັກໝຸດເຄື່ອງຫຼິ້ນມີເດຍ"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"ເພື່ອສືບຕໍ່ການຫຼິ້ນແບບໄວໆ, ເຄື່ອງຫຼິ້ນມີເດຍຈະເປີດປະໄວ້ໃນການຕັ້ງຄ່າດ່ວນ"</string>
