--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -73,9 +73,9 @@
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="631521133525979967">"Десното слушно помагало е поврзано.\n\nЗа да го спарите левото, проверете дали е вклучено и подготвено за спарување."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_positive_button" msgid="533612082529204078">"Спари го десното уво"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Спари го левото уво"</string>
-    <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Поставки за слушен апарат"</string>
+    <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Поставки за слушни апарати"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Кратенка, компатибилност со слушни помагала"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Зададени вредности"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Зададени вредности"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Не можеше да се ажурира зададената вредност"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Аудиоизлез"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"За аудио-излезот"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Откажи"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Не, фала"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Се согласувам"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Повеќе"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Отклучување со лице"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Имајте предвид"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Користете го отпечатокот за да го отклучувате телефонот или да ги одобрувате купувањата.\n\nЗабелешка: не може да го користите отпечатокот за да го отклучувате уредов. За повеќе информации, контактирајте со администраторот на вашата организација."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Откажи"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"Не, фала"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Се согласувам"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Да се прескокне отпечатокот?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Поставувањето отпечаток трае само минута или две. Ако го прескокнете ова, може да го додадете вашиот отпечаток подоцна преку „Поставки“."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"При секое заклучување на уредот"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 минути по авто. исклучување на екранот"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Само по рестартирање на уредот"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Ако користите друго заклучување за вашиот „Приватен простор“, можеби ќе треба да потврдите дека сте вие за да отворите апликации во „Приватниот простор“."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Скриј го „Приватниот простор“"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Скриј го „Приватниот простор“ кога е заклучен"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"За да спречите други луѓе да знаат дека имате „Приватен простор“ на вашиот уред, може да го скриете од списокот со апликации"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Постави"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Приватен простор"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Скријте ги или заклучете ги приватните апликации во засебен простор. Користете посебна сметка на Google за дополнителна безбедност."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Поставете го „Приватниот простор“"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Изберете сметка на Google за „Приватен простор“"</b>\n"Користењето посебна сметка помага да се сопре синхронизираните датотеки, фотографии и е-пораки да се појавуваат надвор од вашиот простор"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Поставете заклучување"</b>\n"Заклучете го просторот за да спречите да го отвораат други луѓе"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Инсталирање апликации"</b>\n"Вашиот „Приватен простор“ има своја Play Store за да може лесно да инсталирате апликации."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Апликациите во вашиот „Приватен простор“ нема да се појавуваат во „Управување со дозволи“, „Контролна табла за приватност“ и други поставки кога „Приватниот простор“ е заклучен.\n\nВашиот „Приватен простор“ не може да се врати на нов уред. Треба да поставите друг „Приватен простор“ ако сакате да го користите на друг уред.\n\nСекој што ќе го поврзе вашиот уред со компјутер или ќе инсталира злонамерни апликации можеби ќе може да пристапи до вашиот „Приватен простор“."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Апликациите од вашиот „Приватен простор“ нема да се појавуваат во „Управувач со дозволи“, „Контролна табла за приватност“, ниту во други поставки кога „Приватниот простор“ ви е заклучен.\n\nВашиот „Приватен простор“ не може да се премести на друг уред. Ќе треба да поставите друг „Приватен простор“ ако сакате да го користите на друг уред.\n\nАко некој го поврзе вашиот уред со компјутер или инсталира штетни апликации на уредот, можеби ќе може да пристапи до вашиот „Приватен простор“."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Дознајте повеќе за „Приватен простор“"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Ова ќе трае неколку секунди"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Се поставува „Приватен простор“…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Системски сертификат"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Закачување сертификати"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Детали за мрежата"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Подмрежна маска"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Име на серверот"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Тип"</string>
@@ -1183,7 +1195,7 @@
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Вклучено - според лице"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Откривање лица"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Дознајте повеќе за „Автоматско ротирање“"</string>
-    <string name="screen_resolution_title" msgid="2690518693139811486">"Резолуција на екран"</string>
+    <string name="screen_resolution_title" msgid="2690518693139811486">"Резолуција на екранот"</string>
     <string name="screen_resolution_option_high" msgid="2617496842852992853">"Висока резолуција"</string>
     <string name="screen_resolution_option_full" msgid="2694003735219114186">"Полна резолуција"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Полната резолуција троши повеќе батерија. Ако ја смените резолуцијата, некои апликации можеби ќе се рестартираат."</string>
@@ -1203,7 +1215,7 @@
     <string name="fold_lock_behavior_title" msgid="786228803694268449">"Продолжете да ги користите апликациите при преклопување"</string>
     <string name="disable_game_default_frame_rate_title" msgid="3712908601744143753">"Оневозможи ја стандардната стапка на слики за игри"</string>
     <string name="disable_game_default_frame_rate_summary" msgid="4436762704707434225">"Го оневозможува ограничувањето на максималната стапка на слики за игри на <xliff:g id="FRAME_RATE">%1$d</xliff:g> Hz."</string>
-    <string name="peak_refresh_rate_title" msgid="2056355754210341011">"Течно движење"</string>
+    <string name="peak_refresh_rate_title" msgid="2056355754210341011">"Течен приказ"</string>
     <string name="peak_refresh_rate_summary" msgid="3212309985294885790">"Автоматски ја зголемува стапката на освежување до <xliff:g id="ID_1">%1$d</xliff:g> Hz за одредени содржини. Го зголемува користењето на батеријата."</string>
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Наметни максимална стапка на освежување"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Највисока стапка на освежување за подобрена реакција на допир и квалитет на анимацијата. Го зголемува користењето на батеријата."</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"MAC-адреса на Wi-Fi на уредот"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Адреса на Bluetooth"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Сериски број"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Време од последно рестартирање"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Датум на производство"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Датум на прво користење"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Број на циклуси"</string>
@@ -2299,7 +2312,7 @@
     <string name="accessibility_hearingaid_instruction_continue_button" msgid="3367260988024430722">"Продолжи"</string>
     <string name="accessibility_hearingaid_title" msgid="1263619711863375614">"Слушни помагала"</string>
     <string name="accessibility_hearingaid_intro" msgid="6686620444104350629">"Поставете ги и управувајте со слушните помагала, кохлеарните импланти и другите уреди за засилување со ASHA и LE Audio"</string>
-    <string name="accessibility_hearingaid_not_connected_summary" msgid="7438018718889849521">"Не се поврзани слушни помагала"</string>
+    <string name="accessibility_hearingaid_not_connected_summary" msgid="7438018718889849521">"Не се поврзани слушни апарати"</string>
     <string name="accessibility_hearingaid_adding_summary" msgid="999051610528600783">"Додајте слушни помагала"</string>
     <string name="accessibility_hearingaid_pair_instructions_title" msgid="2357706801112207624">"Спарување слушни помагала"</string>
     <string name="accessibility_hearingaid_pair_instructions_message" msgid="581652489109350119">"На следниот екран, допрете ги слушните помагала. Можеби ќе треба да ги спарите левото и десното уво одделно.\n\nСлушните помагала треба да се вклучени и подготвени за спарување."</string>
@@ -2312,14 +2325,14 @@
     <string name="accessibility_hearing_device_connected_title" msgid="3785140037249487287">"Слушни помагала"</string>
     <string name="accessibility_hearing_device_saved_title" msgid="7573926212664909296">"Зачувани уреди"</string>
     <string name="accessibility_hearing_device_control" msgid="2661965917013100611">"Контроли за слушно помагало"</string>
-    <string name="accessibility_hearing_device_shortcut_title" msgid="7645100199603031360">"Кратенка за слушни помагала"</string>
+    <string name="accessibility_hearing_device_shortcut_title" msgid="7645100199603031360">"Кратенка за слушни апарати"</string>
     <string name="accessibility_hac_mode_title" msgid="2037950424429555652">"Компатибилност со слушни помагала"</string>
     <string name="accessibility_hac_mode_summary" msgid="5198760061256669067">"Ја подобрува компатибилноста со телекалемите и го намалува несаканиот шум"</string>
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"За слушните помагала"</string>
     <string name="accessibility_hearing_device_footer_summary" msgid="256061045064940818">"За да најдете други слушни апарати што не се поддржани од ASHA или LE Audio, допрете „"<b>"Спарете нов уред"</b>" &gt; "<b>"Видете повеќе уреди"</b>"“"</string>
     <string name="accessibility_hearing_device_pairing_page_title" msgid="6608901091770850295">"Спарете слушно помагало"</string>
     <string name="accessibility_hearing_device_pairing_intro" msgid="7022201665808166517">"На страницава може да ги спарите слушните апарати ASHA и LE Audio. Погрижете се вашиот слушен апарат да биде вклучен и подготвен за спарување."</string>
-    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Достапни слушни помагала"</string>
+    <string name="accessibility_found_hearing_devices" msgid="637407580358386553">"Достапни слушни апарати"</string>
     <string name="accessibility_found_all_devices" msgid="7817834722148556520">"Не го гледате вашето слушно помагало?"</string>
     <string name="accessibility_list_all_devices_title" msgid="161495343959211216">"Видете повеќе уреди"</string>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"Приспособување на аудиото"</string>
@@ -3139,7 +3152,7 @@
     <string name="sim_selection_channel_title" msgid="3193666315607572484">"Избор на SIM"</string>
     <string name="dashboard_title" msgid="5660733037244683387">"Поставки"</string>
     <string name="network_dashboard_title" msgid="788543070557731240">"Мрежа и интернет"</string>
-    <string name="network_dashboard_summary_mobile" msgid="7750924671970583670">"Мобилна, Wi‑Fi, точка на пристап"</string>
+    <string name="network_dashboard_summary_mobile" msgid="7750924671970583670">"Мобилна мрежа, Wi‑Fi, точка на пристап"</string>
     <string name="network_dashboard_summary_no_mobile" msgid="4022575916334910790">"Wi‑Fi, точка на пристап"</string>
     <string name="connected_devices_dashboard_title" msgid="19868275519754895">"Поврзани уреди"</string>
     <string name="connected_devices_dashboard_default_summary" msgid="7211769956193710397">"Bluetooth, спарување"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"Измени"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"Распореди"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"Распоред"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"Автоматско вклучување"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Додајте календар"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Користете го календарот"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Распоред"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Распоред"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Не вознемирувај во одредено време"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Правила за „Не вознемирувај“"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Лева"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Десна"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Футрола за полнење"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Табла за поставки"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Наметни режим на работна површина"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Наметнете го експерименталниот режим на работна површина на секундарните екрани"</string>
