--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Зүүн чих хослуулах"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Сонсголын төхөөрөмжийн тохиргоо"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Товчлол, сонсголын төхөөрөмжийн зохицол"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Урьдчилсан тохируулгууд"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Урьдчилсан тохируулгууд"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Урьдчилсан тохируулгыг шинэчилж чадсангүй"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Аудио гаралт"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Аудио оролтын тухай"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Болих"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Үгүй, баярлалаа"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Би зөвшөөрч байна"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Бусад"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Таны царайгаар түгжээ тайлах"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Санамж"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Утасныхаа түгжээг тайлах, худалдан авалт зөвшөөрөхийн тулд хурууны хээгээ ашиглана уу.\n\nСанамж: Та хурууны хээгээр энэ төхөөрөмжийн түгжээг тайлах боломжгүй. Дэлгэрэнгүй мэдээлэл авахын тулд байгууллагынхаа админтай холбогдоно уу."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Цуцлах"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"Үгүй баярлалаа"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Би зөвшөөрч байна"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Хурууны хээг алгасах уу?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Хурууны хээг тохируулахад хэдхэн минут болно. Та үүнийг алгасвал хурууны хээгээ дараа тохиргоо хэсэгт нэмэх боломжтой."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Төхөөрөмж түгжигдэх бүрд"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"Дэлгэц автоматаар амарснаас хойш 5 минут"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Зөвхөн төхөөрөмжийг дахин эхлүүлсний дараа"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Та хаалттай орон зайдаа өөр түгжээ ашиглавал хаалттай орон зайд тань байгаа аппуудыг нээхийн тулд өөрийгөө мөн болохыг баталгаажуулах шаардлагатай байж магадгүй."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Хаалттай орон зайг нуух"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Хаалттай орон зайг түгжээтэй үед нь нуух"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Таны төхөөрөмж дээр хаалттай орон зай байгаа болохыг бусад хүн мэдэхийг зогсоохын тулд та үүнийг аппуудынхаа жагсаалтаас нуух боломжтой"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Тохируулах"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Хаалттай орон зай"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Тусдаа орон зайд хувийн аппуудыг нуух эсвэл түгжинэ үү. Нэмэлт хамгаалалтад зориулалтын Google Бүртгэл ашиглана уу."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Хаалттай орон зайгаа тохируулах"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Орон зайдаа Google Бүртгэл сонгох"</b>\n"Зориулалтын бүртгэл ашиглах нь синк хийсэн файл, зураг болон имэйлүүдийг таны орон зайнаас гадуур харагдахыг зогсооход тусалдаг"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Түгжээ тохируулах"</b>\n"Орон зайгаа түгжиж, бусад хүнийг үүнийг нээхийг зогсоогоорой"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Аппууд суулгах"</b>\n"Таны хаалттай орон зайд өөрийн гэсэн Play Store байдаг тул ингэснээр та аппуудыг хялбархан суулгах боломжтой."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Таны хаалттай орон зай түгжээтэй үед хаалттай орон зайн аппууд тань зөвшөөрлийн менежер, нууцлалын хяналтын самбар, бусад тохиргоонд харагдахгүй.\n\nТаны хаалттай орон зайг шинэ төхөөрөмжид сэргээх боломжгүй. Хэрэв та үүнийг өөр төхөөрөмжид ашиглахыг хүсвэл хаалттай өөр орон зай тохируулах шаардлагатай болно.\n\nТаны төхөөрөмжийг компьютерт холбодог эсвэл таны төхөөрөмжид хортой апп суулгадаг аливаа хүн таны хаалттай орон зайд хандах боломжтой байж магадгүй."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Таны хаалттай орон зай түгжээтэй үед таны хаалттай орон зайн аппууд зөвшөөрлийн менежер, нууцлалын хяналтын самбар болон бусад тохиргоонд харагдахгүй.\n\nТаны хаалттай орон зайг шинэ төхөөрөмж рүү зөөх боломжгүй. Хэрэв та үүнийг өөр төхөөрөмжид ашиглахыг хүсвэл өөр хаалттай орон зай тохируулах шаардлагатай.\n\nТаны төхөөрөмжийг компьютерт холбодог эсвэл таны төхөөрөмжид аюултай аппууд суулгадаг аливаа хүн таны хаалттай орон зайд хандах боломжтой байж магадгүй."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Хаалттай орон зайн нэмэлт мэдээлэл авах"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Үүнд хэдэн хором зарцуулна"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Хаалттай орон зайг тохируулж байна…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Системийн сертификат"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Сертификат бэхлэх"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Сүлжээний мэдээлэл"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Subnet маск"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Серверийн нэр"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Төрөл"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Төхөөрөмжийн Wi‑Fi MAC хаяг"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth хаяг"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Серийн дугаар"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Асаалттай байсан хугацаа"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Үйлдвэрлэсэн огноо"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Анх ашигласан огноо"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Мөчлөгийн тоо"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"Засах"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"Хуваарь"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"Хуваарь"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"Автоматаар асаах"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Календарь нэмээрэй"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Календариа ашиглаарай"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Хуваарь"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Хуваарь"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Утасны дууг тодорхой цагт хаах"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Бүү саад бол горимын дүрмийг тохируулах"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Зүүн"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Баруун"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Гэр"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Тохиргооны самбар"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Дэлгэцийн горимыг хүчлэх"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Дэлгэцийн туршилтын горимыг хоёрдогч дэлгэцэд хүчлэх"</string>
@@ -4968,7 +4979,7 @@
     <string name="mobile_data_temp_using" msgid="5211002380149434155">"<xliff:g id="SUBNAME">%1$s</xliff:g>-г түр зуур ашиглаж байна"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Холболт алга"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Мобайл дата автоматаар холбогдохгүй"</string>
-    <string name="mobile_data_disable_title" msgid="8438714772256088913">"Мобайл датаг унтраах уу?"</string>
+    <string name="mobile_data_disable_title" msgid="8438714772256088913">"Хөдөлгөөнт төхөөрөмжийн датаг унтраах уу?"</string>
     <string name="mobile_data_disable_message" msgid="7829414836454769970">"Та <xliff:g id="CARRIER">%s</xliff:g>-р дата эсвэл интернэтэд хандах боломжгүй болно. Интернэт нь зөвхөн Wi-Fi-р боломжтой байх болно."</string>
     <string name="mobile_data_disable_message_default_carrier" msgid="4449469407705838612">"таны оператор компани"</string>
     <string name="not_allowed_by_ent" msgid="1958611623122304411">"Танай байгууллагаас зөвшөөрдөггүй"</string>
