--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"बायाँ भाग कनेक्ट गर्नुहोस्"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"श्रवण यन्त्रसम्बन्धी सेटिङ"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"सर्टकट, श्रवण सहयोगसम्बन्धी कम्प्याटिबिलिटी"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"प्रिसेटहरू"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"प्रिसेटहरू"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"प्रिसेट अपडेट गर्न सकिएन"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"अडियो आउटपुट"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"अडियो आउटपुटका बारेमा"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"रद्द गर्नुहोस्"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"पर्दैन, धन्यवाद"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"म सहमत छु"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"थप"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"आफ्नो अनुहारमार्फत अनलक गर्नु…"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"ख्याल गर्नुहोस्"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"तपाईंको फोन अनलक वा खरिदहरूको अनुमोदन गर्न आफ्ना फिंगरप्रिन्टहरूको प्रयोग गर्नुहोस्।\n\nटिपोट: तपाईं यो डिभाइस अनलक गर्न आफ्नो फिंगरप्रिन्टको प्रयोग गर्न सक्नुहुन्न। थप जानकारीका लागि आफ्नो संगठनको प्रशासकलाई सम्पर्क गर्नुहोस्।"</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"रद्द गर्नुहोस्"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"पर्दैन, धन्यवाद"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"म सहमत छु"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"फिंगरप्रिन्ट सेटअप स्किप गर्ने हो?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"फिंगरप्रिन्ट सेटअप गर्न केवल एक वा दुई मिनेट लाग्छ। स्किप गर्नुभएको खण्डमा, तपाईं सेटिङहरूमा गएर पछि आफ्नो फिंगरप्रिन्ट हाल्न सक्नुहुन्छ।"</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"डिभाइस लक हुँदैपिच्छे"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"स्क्रिन टाइम आउट भएको ५ मिनेटपछि"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"डिभाइस रिस्टार्ट भएपछि मात्र"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"तपाईं आफ्नो निजी स्पेसका लागि कुनै अर्को लक प्रयोग गर्नुहुन्छ भने तपाईंको निजी स्पेसमा एपहरू खोल्न तपाईंले आफ्नो पहिचान पुष्टि गर्नु पर्ने हुन्छ।"</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"निजी स्पेस लुकाउनुहोस्"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"निजी स्पेस लक गरिएको बेलामा उक्त स्पेस लुकाउनुहोस्"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"अन्य मानिसहरूलाई तपाईंको डिभाइसमा निजी स्पेस छ भन्ने कुरा थाहा नदिन तपाईं आफ्नो एपको सूचीबाट उक्त स्पेस लुकाउन सक्नुहुन्छ"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"सेटअप गर्नुहोस्"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"निजी स्पेस"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"निजी एपहरू छुट्टै स्पेसमा लुकाउनुहोस् वा लक गर्नुहोस्। थप सुरक्षाका लागि विशेष Google खाता प्रयोग गर्नुहोस्।"</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"आफ्नो निजी स्पेस सेटअप गर्नुहोस्"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"आफ्नो स्पेसका लागि Google खाता छनौट गर्नुहोस्"</b>\n"तपाईंले विशेष खाता प्रयोग गर्नुभयो भने तपाईं आफ्नो स्पेस बाहिर देखिने सिंक गरिएको फाइल, फोटो र इमेलहरू रोक्न सक्नुहुन्छ।"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"लक सेटअप गर्नुहोस्"</b>\n"अरू मान्छेले तपाईंको स्पेस खोल्न नसकून् भन्नाका लागि उक्त स्पेस लक गर्नुहोस्"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"एपहरू इन्स्टल गर्नुहोस्"</b>\n"तपाईंले सजिलैसँग एप इन्स्टल गर्न सक्नुहोस् भन्नाका लागि तपाईंको निजी स्पेसमै Play स्टोर हुन्छ।"</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"तपाईंको निजी स्पेस लक गरिएका बेला सो स्पेसमा भएका एपहरू अनुमति व्यवस्थापन, गोपनीयतासम्बन्धी ड्यासबोर्ड र अन्य सेटिङमा देखिने छैनन्।\n\nतपाईंको निजी स्पेस नयाँ डिभाइसमा रिस्टोर गर्न सकिँदैन। तपाईं अर्को डिभाइसमा निजी स्पेस प्रयोग गर्न चाहनुहुन्छ भने तपाईंले सो डिभाइसमा निजी स्पेस सेटअप गर्नु पर्ने हुन्छ।\n\nतपाईंको डिभाइस कम्प्युटरमा कनेक्ट गर्ने वा तपाईंको डिभाइसमा हानिकारक एपहरू इन्स्टल गर्ने सबै जना तपाईंको निजी स्पेस एक्सेस गर्न सक्ने छन्।"</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"तपाईंको निजी स्पेस लक गरिएका बेला यसमा भएका एपहरू अनुमति व्यवस्थापन, गोपनीयतासम्बन्धी ड्यासबोर्ड र अन्य सेटिङमा देखिने छैनन्।\n\nतपाईंको निजी स्पेस सारेर अर्को डिभाइसमा लैजान सकिँदैन। तपाईं अर्को डिभाइसमा निजी स्पेस प्रयोग गर्न चाहनुहुन्छ भने तपाईंले अर्को डिभाइसमा निजी स्पेस सेटअप गर्नु पर्ने हुन्छ।\n\nतपाईंको डिभाइस कम्प्युटरमा कनेक्ट गर्ने वा तपाईंको डिभाइसमा हानिकारक एपहरू इन्स्टल गर्ने सबै जना तपाईंको निजी स्पेस एक्सेस गर्न सक्ने छन्।"</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"निजी स्पेसका बारेमा थप जान्नुहोस्"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"लोड हुन केही बेर लाग्ने छ"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"निजी स्पेस सेटअप गरिँदै छ…"</string>
@@ -796,7 +806,7 @@
     <string name="lockpassword_password_requires_nonletter" msgid="1185342065898300006">"{count,plural, =1{अनिवार्य रूपमा अक्षरबाहेकका कम्तीमा पनि १ वर्ण समावेश हुनु पर्छ}other{अनिवार्य रूपमा अक्षरबाहेकका कम्तीमा पनि # वर्ण समावेश हुनु पर्छ}}"</string>
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{अनिवार्य रूपमा अङ्कबाहेकका कम्तीमा पनि १ वर्ण समावेश हुनु पर्छ}other{अनिवार्य रूपमा अङ्कबाहेकका कम्तीमा पनि # वटा वर्ण समावेश हुनु पर्छ}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"डिभाइसको प्रशासकले पछिल्लो पासवर्ड प्रयोग गर्ने अनुमति दिँदैन"</string>
-    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"बढ्दो, घट्दो वा दोहोरिएका अङ्कहरूको अनुक्रमलाई निषेध गरिएको छ"</string>
+    <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"बढ्दो, घट्दो क्रममा वा दोहोरिएका अङ्क हाल्न मिल्दैन"</string>
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"पुष्टि गर्नुहोस्"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"मेटाउनुहोस्"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"स्क्रिन लक पहिले नै परिवर्तन गरियो। नयाँ स्क्रिन लकमार्फत फेरि प्रयास गर्नुहोस्।"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"सिस्टमको प्रमाणपत्र"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"प्रमाणपत्र पिन गरिँदै छ"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"नेटवर्कको विवरण"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"सबनेट मास्क"</string>
     <string name="server_name_title" msgid="7257095185810299066">"सर्भरको नाम"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"प्रकार"</string>
@@ -1215,7 +1227,7 @@
     <string name="adaptive_sleep_privacy" msgid="7664570136417980556">"कुनै व्यक्तिले स्क्रिनमा हेरिरहेको छ या छैन भन्ने कुरा पत्ता लगाउन \"स्क्रिनमा हेरिरहँदा\" नामक सेटिङले अगाडिको क्यामेरा प्रयोग गर्दछ। यसले यो डिभाइसभित्रै मात्र काम गर्छ र कहिल्यै पनि फोटो भण्डारण गर्ने वा Google मा पठाउने काम गर्दैन।"</string>
     <string name="adaptive_sleep_contextual_slice_title" msgid="7467588613212629758">"स्क्रिनमा हेरिरहँदा स्क्रिन सक्रिय राख्ने सुविधा अन गर्नुहोस्"</string>
     <string name="adaptive_sleep_contextual_slice_summary" msgid="2993867044745446094">"स्क्रिनमा हेरिरहेका बेला स्क्रिन सक्रिय राख्नुहोस्"</string>
-    <string name="power_consumption_footer_summary" msgid="4901490700555257237">"लामो समय पछि स्क्रिन टाइमआउट भयो भने बढी ब्याट्री खपत हुने छ।"</string>
+    <string name="power_consumption_footer_summary" msgid="4901490700555257237">"लामो समयपछि स्क्रिन टाइमआउट भयो भने बढी ब्याट्री खपत हुन्छ।"</string>
     <string name="auto_rotate_camera_lock_title" msgid="5369003176695105872">"क्यामेरा लक गरिएको छ"</string>
     <string name="auto_rotate_camera_lock_summary" msgid="5699491516271544672">"अनुहार पत्ता लगाउने सुविधा प्रयोग गर्न क्यामेरा अनिवार्य रूपमा अनलक गर्नु पर्छ"</string>
     <string name="adaptive_sleep_camera_lock_summary" msgid="8417541183603618098">"स्क्रिनमा हेरिरहेको पहिचान गर्ने सुविधा प्रयोग गर्न क्यामेरा अनलक गरिएको हुनु पर्छ"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"डिभाइसको Wi‑Fi म्याक एड्रेस"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"ब्लुटुथ एड्रेस"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"क्रम संख्या"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"सक्रिय समय"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"बनेको मिति"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"पहिलो पटक प्रयोग गरिएको मिति"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"साइकल काउन्ट"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"सम्पादन गर्नुहोस्"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"समयतालिकाहरू"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"समयतालिका"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"स्वतः अन गर्नुहोस्"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"कुनै पात्रो हाल्नुहोस्"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"आफ्नो पात्रो प्रयोग गर्नुहोस्"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"समयतालिका"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"समयतालिका"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"तोकिएको समयमा फोनलाई मौन अवस्थामा राख्नुहोस्‌"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"बाधा नपुर्‍याउनुहोस् नामक मोडका नियमहरू सेट गर्नुहोस्"</string>
@@ -3670,7 +3679,7 @@
     <string name="notification_badge_title" msgid="6854537463548411313">"नयाँ सूचना आएको जनाउने थोप्लो देखाउन दिइयोस्"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"सूचना जनाउने थोप्लो देखाउनुहोस्"</string>
     <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"Do Not Disturb ओभरराइड गर्नुहोस्"</string>
-    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"बाधा नपुर्‍याउनुहोस् नामक सुविधा अन भएका बेला पनि यी सूचना आइरहन दिइयोस्"</string>
+    <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"बाधा नपुर्‍याउनुहोस् नामक सुविधा अन भएका बेला पनि यी सूचना आइरहन दिनुहोस्"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"लक स्क्रिन"</string>
     <string name="app_notifications_dialog_done" msgid="573716608705273004">"भयो"</string>
     <string name="notification_show_lights_title" msgid="5564315979007438583">"झिम झिम बत्ती बल्ने"</string>
@@ -4055,7 +4064,7 @@
     <string name="storage_summary" msgid="5903562203143572768">"<xliff:g id="PERCENTAGE">%1$s</xliff:g> प्रयोग भएको - खाली <xliff:g id="FREE_SPACE">%2$s</xliff:g>"</string>
     <string name="display_dashboard_summary" msgid="1599453894989339454">"अँध्यारो थिम, फन्टको आकार, चमक"</string>
     <string name="memory_summary" msgid="8221954450951651735">"<xliff:g id="TOTAL_MEMORY">%2$s</xliff:g> मध्ये औसत <xliff:g id="USED_MEMORY">%1$s</xliff:g> प्रयोग भएको छ"</string>
-    <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g> रूपमा साइन इन गरिएको छ"</string>
+    <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g> का रूपमा साइन इन गरिएको छ"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"अपडेट गरी Android <xliff:g id="VERSION">%1$s</xliff:g> बनाइएको छ"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"अद्यावधिक उपलब्ध छ"</string>
     <string name="disabled_by_policy_title" msgid="6852347040813204503">"कार्यसम्बन्धी नीतिका आधारमा ब्लक गरिएको छ"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"बायाँ"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"दायाँ"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"खोल"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"सेटिङहरू नामक प्यानल"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"बलपूर्वक डेस्कटप मोड लागू गर्नुहोस्"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"सहायक डिस्प्लेमा प्रयोगात्मक डेस्कटप मोड बलपूर्वक लागू गर्नुहोस्"</string>
