--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Sparuj lewe ucho"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Ustawienia urządzenia słuchowego"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Skrót, zgodność z aparatem słuchowym"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Gotowe ustawienia"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Gotowe ustawienia"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Nie udało się zaktualizować gotowego ustawienia"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Wyjście audio"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"O wyjściu audio"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Anuluj"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Nie, dziękuję"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Zgadzam się"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Więcej"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Odblokowywanie skanem twarzy"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Pamiętaj"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Odblokowuj telefon i zatwierdzaj zakupy odciskiem palca.\n\nUwaga: nie możesz odblokowywać tego urządzenia odciskiem palca. Więcej informacji uzyskasz od administratora swojej organizacji."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Anuluj"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"Nie, dziękuję"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Zgadzam się"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Pominąć odcisk palca?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Zapisanie odcisku palca zajmuje tylko chwilę. Zawsze możesz go dodać później w ustawieniach."</string>
@@ -608,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Skonfiguruj"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Przestrzeń prywatna"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Ukryj lub zablokuj aplikacje prywatne w oddzielnym obszarze. Aby zwiększyć bezpieczeństwo, skorzystaj z dedykowanego konta Google."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Skonfiguruj przestrzeń prywatną"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Wybierz konto Google dla swojej przestrzeni"</b>\n"Korzystanie z dedykowanego konta zapobiega wyświetlaniu się synchronizowanych plików, zdjęć i e-maili poza Twoją przestrzenią."</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Ustaw blokadę"</b>\n"Zablokuj swoją przestrzeń, żeby inni nie mogli jej otworzyć."</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Zainstaluj aplikacje"</b>\n"Twoja przestrzeń prywatna ma własny Sklep Play, dzięki czemu instalowanie aplikacji jest proste."</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Gdy przestrzeń prywatna jest zablokowana, znajdujące się w niej aplikacje nie będą się pojawiać w menedżerze uprawnień, panelu prywatności ani innych ustawieniach.\n\nPrzestrzeni prywatnej nie da się przywrócić na nowym urządzeniu. Jeśli chcesz korzystać z przestrzeni prywatnej na innym urządzeniu, musisz skonfigurować nową.\n\nKażdy, kto połączy Twoje urządzenie z komputerem lub zainstaluje na urządzeniu szkodliwe aplikacje, będzie mógł uzyskać dostęp do Twojej przestrzeni prywatnej."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Aplikacje w przestrzeni prywatnej nie będą wyświetlane w menedżerze uprawnień, panelu prywatności ani innych ustawieniach, gdy przestrzeń prywatna będzie zablokowana.\n\nPrzestrzeni prywatnej nie można przenieść na nowe urządzenie. Jeśli chcesz z niej korzystać na innym urządzeniu, musisz skonfigurować kolejną przestrzeń prywatną.\n\nKażdy, kto połączy Twoje urządzenie z komputerem lub zainstaluje na urządzeniu szkodliwe aplikacje, może uzyskać dostęp do Twojej przestrzeni prywatnej."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Więcej o przestrzeni prywatnej"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Potrwa to kilka chwil"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Konfiguruję przestrzeń prywatną…"</string>
@@ -1054,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Certyfikat systemu"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Przypinanie certyfikatu"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Szczegóły sieci"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Maska podsieci"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Nazwa serwera"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Typ"</string>
@@ -1371,7 +1384,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Adres MAC karty Wi‑Fi urządzenia"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Adres Bluetooth"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Numer seryjny"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Czas działania"</string>
+    <string name="status_up_time" msgid="4250719389455342087">"Czas działania"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Data produkcji"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Data pierwszego użycia"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Liczba cykli"</string>
@@ -4780,6 +4793,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Po lewej"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Po prawej"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Etui"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Panel ustawień"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Wymuś tryb pulpitu"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Wymuś eksperymentalny tryb pulpitu na dodatkowych ekranach"</string>
@@ -4840,14 +4855,14 @@
     <string name="track_frame_time_keywords" msgid="7885340257945922239">"GPU"</string>
     <string name="enable_16k_pages" msgid="8001470927566110689">"Uruchom ze stroną 16 KB"</string>
     <string name="enable_16k_pages_summary" msgid="1964363364670306912">"Uruchom z jądrem systemu obsługującym stronę 16 KB"</string>
-    <string name="confirm_enable_16k_pages_title" msgid="611010487387251491">"Zmiana z trybu 4 KB na 16 KB"</string>
+    <string name="confirm_enable_16k_pages_title" msgid="611010487387251491">"Zmiana z trybu 4 kB na 16 kB"</string>
     <string name="confirm_enable_16k_pages_text" msgid="6129208614283750541">"Korzystasz z ogólnego trybu strony z jądrem 4 kB i zamierzasz przełączyć się na tryb 16 kB. W tym trybie nie można zagwarantować integralności oprogramowania. Kiedy program rozruchowy będzie odblokowany, dane zapisane na telefonie mogą być zagrożone. Zmiana spowoduje ponowne uruchomienie urządzenia. W tych trybach niektóre funkcje będą wyłączone, a część aplikacji może nie działać. Aby przywrócić na urządzeniu tryb produkcyjny, musisz przełączyć je z powrotem na tryb 4 kB i zablokować program rozruchowy, co spowoduje zresetowanie urządzenia. Gdy na urządzeniu uruchomi się Android, wyłącz zdjęcie blokady OEM w Opcjach programisty."</string>
     <string name="confirm_enable_4k_pages_title" msgid="3210360137887034659">"Zmiana z trybu 16 KB na 4 KB"</string>
     <string name="confirm_enable_4k_pages_text" msgid="155070605667160083">"Korzystasz z ogólnego trybu strony z jądrem 16 kB i zamierzasz przełączyć się na tryb 4 kB. W tym trybie nie można zagwarantować integralności oprogramowania. Kiedy program rozruchowy będzie odblokowany, dane zapisane na telefonie mogą być zagrożone. Zmiana spowoduje ponowne uruchomienie urządzenia. W tych trybach niektóre funkcje będą wyłączone, a część aplikacji może nie działać. Aby przywrócić na urządzeniu tryb produkcyjny, musisz zablokować program rozruchowy, co spowoduje zresetowanie urządzenia. Gdy na urządzeniu uruchomi się Android, wyłącz zdjęcie blokady OEM w Opcjach programisty."</string>
     <string name="toast_16k_update_failed_text" msgid="8888858987184345567">"Nie udało się zaktualizować jądra systemu, aby obsługiwał strony o rozmiarze 16 KB."</string>
     <string name="progress_16k_ota_title" msgid="2117218313875523741">"Wprowadzam zmianę"</string>
-    <string name="confirm_format_ext4_title" msgid="6696191800594435577">"Sformatować ponownie urządzenie jako ext4? (Jest to wymagane w przypadku trybu 16 KB)."</string>
-    <string name="confirm_format_ext4_text" msgid="7940372488624630214">"Aby można było użyć trybu 16 KB w Opcjach programisty, musisz przekonwertować partycję danych na system ext4. W tym trybie nie można zagwarantować integralności oprogramowania. Kiedy program rozruchowy będzie odblokowany, dane zapisane na telefonie mogą być zagrożone. Po aktywowaniu trybu 16 KB będzie trzeba co najmniej raz uruchomić ponownie urządzenie. Po włączeniu tego trybu przełączanie się między trybami 4 KB i 16 KB będzie wymagało tylko jednokrotnego restartu. W tych trybach niektóre funkcje będą wyłączone, a część aplikacji może nie działać. Aby przywrócić na urządzeniu tryb produkcyjny, musisz przełączyć je z powrotem na tryb 4 KB i zablokować program rozruchowy, co spowoduje zresetowanie urządzenia. Gdy na urządzeniu uruchomi się Android, wyłącz zdjęcie blokady OEM w Opcjach programisty. Z urządzenia zostaną usunięte wszystkie dane, a po potwierdzeniu system plików zmieni się na ext4. Po wykonaniu tych czynności wróć tutaj, aby ponownie włączyć tryb 16 KB."</string>
+    <string name="confirm_format_ext4_title" msgid="6696191800594435577">"Sformatować ponownie urządzenie jako ext4? (Jest to wymagane w przypadku trybu 16 kB)."</string>
+    <string name="confirm_format_ext4_text" msgid="7940372488624630214">"Aby można było użyć trybu 16 kB w Opcjach programisty, musisz przekonwertować partycję danych na system ext4. W tym trybie nie można zagwarantować integralności oprogramowania. Kiedy program rozruchowy będzie odblokowany, dane zapisane na telefonie mogą być zagrożone. Po aktywowaniu trybu 16 kB będzie trzeba uruchomić urządzenie ponownie. Po włączeniu tego trybu przełączanie się między trybami 4 kB i 16 kB będzie wymagało tylko jednokrotnego restartu. W tych trybach niektóre funkcje będą wyłączone, a część aplikacji może nie działać. Aby przywrócić na urządzeniu tryb produkcyjny, musisz przełączyć je z powrotem na tryb 4 kB i zablokować program rozruchowy, co spowoduje zresetowanie urządzenia. Gdy na urządzeniu uruchomi się Android, wyłącz zdjęcie blokady OEM w Opcjach programisty. Z urządzenia zostaną usunięte wszystkie dane, a po potwierdzeniu system plików zmieni się na ext4. Po wykonaniu tych czynności wróć tutaj, aby ponownie włączyć tryb 16 kB."</string>
     <string name="confirm_ext4_button_text" msgid="6045501984773738407">"Usuń wszystkie dane"</string>
     <string name="format_ext4_failure_toast" msgid="8059453995800471549">"Nie udało się wyczyścić partycji danych i sformatować jej jako ext4."</string>
     <string name="confirm_oem_unlock_for_16k_title" msgid="5374451262432025419">"Tryb 16 KB wymaga odblokowania programu rozruchowego"</string>
