--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Asociază urechea stângă"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Setări pentru aparate auditive"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Comandă rapidă, compatibilitate cu aparatele auditive"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="5429761844739722885">"Presetări"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Presetări"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Nu s-a putut actualiza presetarea"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Ieșire audio"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Despre ieșirea audio"</string>
@@ -312,7 +312,8 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Anulează"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Nu, mulțumesc"</string>
+    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
+    <skip />
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Accept"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Mai multe"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Deblochează folosindu-ți chipul"</string>
@@ -373,7 +374,8 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Reține"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Folosește amprenta ca să deblochezi telefonul sau să aprobi achizițiile.\n\nNotă: nu îți poți folosi amprenta ca să deblochezi acest dispozitiv. Pentru informații suplimentare, contactează administratorul organizației."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Anulează"</string>
-    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="6104718999323591180">"Nu, mulțumesc"</string>
+    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Accept"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Omiți amprenta?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Setarea amprentei durează doar un minut sau două. Dacă ignori acest pas acum, poți adăuga amprenta mai târziu din setări."</string>
@@ -577,8 +579,7 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"La fiecare blocare a dispozitivului"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"Cinci minute după dezactivarea ecranului"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Doar după ce dispozitivul repornește"</string>
-    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
-    <skip />
+    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Dacă folosești altă blocare pentru spațiul privat, poate fi nevoie să-ți confirmi identitatea ca să deschizi aplicații în spațiul privat."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Ascunde spațiul privat"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Ascunde spațiul privat când este blocat"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Pentru ca alții să nu știe că ai un spațiu privat pe dispozitiv, ascunde-l din lista de aplicații"</string>
@@ -609,11 +610,20 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Configurează"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Spațiu privat"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Ascunde sau blochează aplicațiile private într-un spațiu separat. Folosește un Cont Google dedicat pentru mai multă securitate."</string>
-    <string name="private_space_setup_sub_header" msgid="5454598292017819146">"Configurează spațiul privat"</string>
-    <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"Alege un Cont Google dedicat pentru spațiul tău"</b>\n"Folosirea unui cont dedicat împiedică afișarea fișierelor, fotografiilor și e-mailurilor sincronizate în afara spațiului"</string>
+    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
+    <skip />
+    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
+    <skip />
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Setează o blocare"</b>\n"Blochează spațiul pentru ca alte persoane să nu-l poată deschide"</string>
-    <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"Instalează aplicații"</b>\n"Spațiul privat are propriul Magazin Play, astfel că poți instala ușor aplicații"</string>
-    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"Aplicațiile din spațiul privat nu vor apărea în Managerul de permisiuni, în tabloul de bord de confidențialitate și în alte setări atunci când spațiul privat este blocat.\n\nSpațiul privat nu poate fi restabilit pe un dispozitiv nou. Va trebui să configurezi alt spațiu privat dacă vrei să-l folosești pe alt dispozitiv.\n\nOricine îți conectează dispozitivul la un computer sau instalează aplicații rău intenționate pe dispozitiv poate să îți acceseze spațiul privat."</string>
+    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
+    <skip />
+    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
+    <skip />
+    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
+    <skip />
+    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Aplicațiile din spațiul privat nu vor apărea în managerul de permisiuni, în tabloul de bord de confidențialitate și în alte setări atunci când spațiul privat este blocat.\n\nSpațiul privat nu poate fi mutat pe un dispozitiv nou. Va trebui să configurezi alt spațiu privat dacă vrei să-l folosești pe alt dispozitiv.\n\nOricine îți conectează dispozitivul la un computer sau instalează aplicații dăunătoare pe dispozitiv poate să îți acceseze spațiul privat."</string>
+    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Află mai multe despre spațiul privat"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Procesul va dura câteva momente"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Se configurează spațiul privat…"</string>
@@ -1055,6 +1065,8 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Certificat de sistem"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Fixarea certificatelor"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Detaliile rețelei"</string>
+    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
+    <skip />
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Mască de subrețea"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Numele serverului"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Tip"</string>
@@ -1372,7 +1384,8 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Adresa MAC Wi-Fi a dispozitivului"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Adresă Bluetooth"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Număr de serie"</string>
-    <string name="status_up_time" msgid="1274778533719495438">"Durată de funcționare"</string>
+    <!-- no translation found for status_up_time (4250719389455342087) -->
+    <skip />
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Data fabricării"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Data primei folosiri"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Numărul de cicluri"</string>
@@ -1636,7 +1649,7 @@
     <string name="lockpassword_confirm_your_pattern_header" msgid="4037701363240138651">"Confirmă modelul"</string>
     <string name="lockpassword_confirm_your_work_pattern_header" msgid="2668883108969165844">"Introdu modelul pentru serviciu"</string>
     <string name="lockpassword_confirm_your_pin_header" msgid="2241722970567131308">"Reintrodu codul PIN"</string>
-    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"Reintroduceți codul PIN de serviciu"</string>
+    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"Reintrodu codul PIN de serviciu"</string>
     <string name="lockpassword_confirm_your_work_pin_header" msgid="4229765521391960255">"Introdu codul PIN pentru serviciu"</string>
     <string name="lockpassword_confirm_passwords_dont_match" msgid="2100071354970605232">"Parolele nu corespund"</string>
     <string name="lockpassword_confirm_pins_dont_match" msgid="1103699575489401030">"Codurile PIN nu corespund"</string>
@@ -3330,14 +3343,10 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"Editează"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"Programe"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"Program"</string>
-    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
-    <skip />
-    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
-    <skip />
+    <string name="zen_mode_automatic_trigger_title" msgid="9193777783079000267">"Activează automat"</string>
+    <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Adaugă un calendar"</string>
+    <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Folosește-ți calendarul"</string>
+    <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Program"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Program"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Dezactivează sunetul uneori"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Setează regulile pentru Nu deranja"</string>
@@ -4344,11 +4353,11 @@
     <string name="account_sync_summary_all_on" msgid="2953682111836599841">"Sincronizare activată pentru toate articolele"</string>
     <string name="account_sync_summary_all_off" msgid="6378301874540507884">"Sincronizare dezactivată pentru toate elementele"</string>
     <string name="enterprise_privacy_settings" msgid="786350385374794180">"Informații privind dispozitivul gestionat"</string>
-    <string name="enterprise_privacy_settings_summary_generic" msgid="5471858290610344646">"Modificări și setări gestionate de organizația dvs."</string>
+    <string name="enterprise_privacy_settings_summary_generic" msgid="5471858290610344646">"Modificări și setări gestionate de organizația ta"</string>
     <string name="enterprise_privacy_settings_summary_with_name" msgid="1315413275836515937">"Modificări și setări gestionate de <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>"</string>
     <string name="enterprise_privacy_header" msgid="4626225398848641603">"Pentru a oferi acces la datele tale de serviciu, organizația poate să modifice setările și să îți instaleze un software pe dispozitiv.\n\nPentru mai multe detalii, contactează administratorul organizației."</string>
     <string name="enterprise_privacy_exposure_category" msgid="2507761423540037308">"Tipuri de informații care pot fi văzute de organizația ta"</string>
-    <string name="enterprise_privacy_exposure_changes_category" msgid="5459989751333816587">"Modificări făcute de administratorul organizației dvs."</string>
+    <string name="enterprise_privacy_exposure_changes_category" msgid="5459989751333816587">"Modificări făcute de administratorul organizației tale"</string>
     <string name="enterprise_privacy_device_access_category" msgid="140157499478630004">"Accesul tău la acest dispozitiv"</string>
     <string name="enterprise_privacy_enterprise_data" msgid="3963070078195245028">"Date asociate contului dvs. de serviciu, cum ar fi e-mailul și calendarul"</string>
     <string name="enterprise_privacy_installed_packages" msgid="6707006112254572820">"Lista de aplicații de pe dispozitiv"</string>
@@ -4504,7 +4513,7 @@
     <string name="angle_enabled_app_set" msgid="7811829383833353021">"Aplicație compatibilă cu ANGLE: <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="graphics_driver_dashboard_title" msgid="5661084817492587796">"Preferințe pentru driverul plăcii grafice"</string>
     <string name="graphics_driver_dashboard_summary" msgid="6348759885315793654">"Modifică setările driverului plăcii grafice"</string>
-    <string name="graphics_driver_footer_text" msgid="5123754522284046790">"Când sunt disponibile mai multe drivere ale plăcii grafice, puteți alege să folosiți driverul actualizat al plăcii grafice pentru aplicațiile instalate pe dispozitiv."</string>
+    <string name="graphics_driver_footer_text" msgid="5123754522284046790">"Când sunt disponibile mai multe drivere ale plăcii grafice, poți alege să folosești driverul actualizat al plăcii grafice pentru aplicațiile instalate pe dispozitiv."</string>
     <string name="graphics_driver_all_apps_preference_title" msgid="1343065382898127360">"Activează pentru toate aplicațiile"</string>
     <string name="graphics_driver_app_preference_title" msgid="3133255818657706857">"Selectează driverul plăcii grafice"</string>
     <string name="graphics_driver_app_preference_default" msgid="764432460281859855">"Prestabilit"</string>
@@ -4785,6 +4794,8 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Stânga"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Dreapta"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Carcasă"</string>
+    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
+    <skip />
     <string name="settings_panel_title" msgid="346363079938069215">"Panou de setări"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Forțează modul desktop"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Forțează modul desktop experimental pe ecrane secundare"</string>
@@ -4915,7 +4926,7 @@
     <string name="allow_mock_modem" msgid="3832264806530479214">"Permite modemul de testare"</string>
     <string name="allow_mock_modem_summary" msgid="9097416612748005374">"Permite dispozitivului să ruleze serviciul de modem de testare pentru testarea codului de măsurare. Nu activa această funcție în timpul folosirii normale a telefonului."</string>
     <string name="disable_screen_share_protections_for_apps_and_notifications" msgid="4987116103699222633">"Dezactivează protecțiile pentru permiterea accesului la ecran"</string>
-    <string name="disable_screen_share_protections_for_apps_and_notifications_summary" msgid="5379583403909210858">"Dezactivează protecțiile de sistem pentru conținutul aplicațiilor sensibile în cazul sesiunilor ulterioare de permitere a accesului la ecran"</string>
+    <string name="disable_screen_share_protections_for_apps_and_notifications_summary" msgid="5379583403909210858">"Dezactivează protecțiile de sistem pentru conținutul sensibil din aplicații în cazul sesiunilor ulterioare de permitere a accesului la ecran"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Media"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Fixează playerul media"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Pentru a relua rapid redarea, playerul media rămâne deschis în Setări rapide"</string>
